--- a/konsumtionslan/index.html
+++ b/konsumtionslan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/konsumtionslan-1..webp" alt="Konsumtionslån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/konsumtionslan-1.webp" alt="Konsumtionslån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -686,7 +686,7 @@ button.bleu {
 <h2>
 <div class="unskew">Konsumtionslån för livets äventyr</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för konsumtionslån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för konsumtionslån"></p>
 <p>I en värld där livets njutningar ofta kräver ekonomiska resurser, blir konsumtionslån en attraktiv lösning.  Dessa lån, utan säkerhet eller pant, erbjuder en möjlighet att förverkliga önskningar och balansera oväntade utgifter. </p>
 <blockquote><p>Ekonomiska möjligheter är avsedda att utnyttjas, inte begränsas</p></blockquote>
 <p> Med ett konsumtionslån kan du finansiera allt från semesteräventyr till nödvändiga renoveringar.  Denna typ av lån medger en större frihet, där låntagaren kan styra användningen av medlen helt fritt. </p>
@@ -846,7 +846,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med konsumtionslån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med konsumtionslån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med konsumtionslån"></p>
 <ul>
 <li>Ingen säkerhet krävs: Konsumtionslån, eller blancolån, kräver ingen pant i form av egendom. Detta gör att låntagaren kan behålla sitt kapital och minimera risken för förlust av tillgångar vid utebliven betalning.</li>
 <li>Flexibla återbetalningstider: Återbetalningstiden för konsumtionslån kan variera mellan några månader upp till flera år. Denna flexibilitet ger låntagare möjlighet att anpassa betalningarna efter sin ekonomiska situation, vilket underlättar planeringen av sin ekonomi.</li>
@@ -866,7 +866,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med konsumtionslån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med konsumtionslån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med konsumtionslån"></p>
 <ul>
 <li>Högre räntor: Konsumtionslån har ofta betydligt högre räntor jämfört med säkrade lån. Detta kan leda till större kostnader på lång sikt, vilket gör avbetalningarna tyngre för låntagaren.</li>
 <li>Möjlighet till överbelåning: Eftersom konsumtionslån inte kräver säkerhet kan det bli enklare för låntagare att ta flera lån. Detta kan över tid leda till en okontrollerad skuldsättning, som kan bli svår att hantera.</li>
