--- a/korttidskredit/index.html
+++ b/korttidskredit/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/09/korttidskredit..webp" alt="Korttidskredit är ett korttidslån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/09/korttidskredit.webp" alt="Korttidskredit är ett korttidslån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -886,7 +886,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Korttidskrediter: En smart lösning</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för korttidskrediter"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för korttidskrediter"></p>
 <p><p>I en värld där oväntade utgifter kan dyka upp utan förvarning är det avgörande att ha en stabil lösning i beredskap.  Många människor finner sig i situationer där snabba medier behövs, och här kommer korttidslån, även kända som korttidskrediter, in i bilden. </p>
 <blockquote><p>Snabb finansiering är nyckeln till att bemästra dagens ekonomiska utmaningar </p></blockquote>
 <p>Dessa lån är designade för att ge omedelbar tillgång till likviditet och erbjuder en tidseffektiv lösning för tillfälliga ekonomiska behov. </p>
@@ -1015,7 +1015,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med korttidskrediter</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med korttidskrediter"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med korttidskrediter"></p>
 <ul>
 <li><strong>Snabb tillgång till likviditet:</strong> Korttidskrediter möjliggör snabb finansiering, vilket är ovärderligt i akuta situationer. Du kan oftast få medel på kontot samma dag, vilket hjälper dig att hantera oväntade utgifter utan dröjsmål.</li>
 <li><strong>Flexibel återbetalningstid:</strong> Många långivare erbjuder anpassningsbara återbetalningstider, vilket innebär att du kan välja en plan som passar din ekonomiska situation. Detta ger en känsla av kontroll över din ekonomi och minskar stressen kring betalningar.</li>
@@ -1033,7 +1033,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med korttidskrediter</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med korttidskrediter"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med korttidskrediter"></p>
 <ul>
 <li><strong>Höga räntor och avgifter:</strong> Korttidslån kommer ofta med höga räntor, vilket kan leda till betydande kostnader om lånet inte återbetalas i tid. Både uppläggningsavgifter och dröjsmålsräntor kan snabbt öka den totala skulden, vilket gör lånet dyrare än förväntat.</li>
 <li><strong>Risk för skuldfällor:</strong> Många låntagare kan frestas att ta nya lån för att betala av gamla, vilket kan resultera i en ogynnsam finansiell situation. Detta mönster kan leda till ständig skuld och ekonomisk stress, vilket undviks med en ansvarsfull hantering.</li>
