--- a/korttidslan/index.html
+++ b/korttidslan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/korttidslan..webp" alt="Korttidslån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/korttidslan.webp" alt="Korttidslån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -896,7 +896,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Att få korttidslån</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för korttidslån innebär att det handlar om lån med en kort återbetalningstid, vanligtvis avsedda för snabba och akuta ekonomiska behov."></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för korttidslån innebär att det handlar om lån med en kort återbetalningstid, vanligtvis avsedda för snabba och akuta ekonomiska behov."></p>
 <p>Vi tycker att korttidslån är en smart lösning för att snabbt återfå kontrollen över din ekonomi.  Dessa lån erbjuder en smidig väg för individer att hantera akuta finansiella behov utan att dras ner av långsiktiga förpliktelser. </p>
 <p>  Till skillnad från traditionella långivningar, är korttidslån designade för att vara både snabba och effektiva.  Med en enkel <a href="https://lastoffer.net/ansokningsprocess/">ansökningsprocess</a> kan du få tillgång till likviditet på bara några timmar, vilket gör det möjligt att bemöta nödsituationer eller oväntade kostnader med lätthet och trygghet. </p>
 <p>  Kanske står du inför plötsliga reparationsbehov på bilen, oväntade medicinska utgifter eller till och med en familjeangelägenhet som kräver framförhållning.  Med korttidslån kan du finansiera dessa situationer utan att behöva vänta på att spara ihop till en större summa. </p>
@@ -972,7 +972,7 @@ Vi tycker att det är viktigt att du vet hur korttidslån fungerar för att kunn
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med korttidslån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med korttidslån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med korttidslån"></p>
 <ul>
 <li>Snabb tillgång till kapital: Korttidslån ger låntagare möjlighet att snabbt få tillgång till pengar, ofta inom samma dag. Detta är särskilt användbart vid akuta kostnader som bilreparationer eller medicinska utgifter.</li>
 <li>Enkel ansökningsprocess: De flesta långivare erbjuder smidiga online-ansökningar som kan slutföras på några minuter. Detta eliminerar behovet av att besöka fysiska kontor och sparar värdefull tid.</li>
@@ -990,7 +990,7 @@ Vi tycker att det är viktigt att du vet hur korttidslån fungerar för att kunn
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med korttidslån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med korttidslån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med korttidslån"></p>
 <ul>
 <li>Höga räntor: En av de största nackdelarna med korttidslån är ofta de förhöjda räntorna. Långivare tar ut högre räntor för att kompensera för den korta lånetiden och den ökade risken, vilket kan göra lånet kostsamt.</li>
 <li>Kort återbetalningstid: Många korttidslån har en återbetalningstid på endast några veckor eller månader. Detta kan sätta press på låntagaren att snabbt samla ihop pengarna, vilket kan vara utmanande om ekonomin är ansträngd.</li>
