--- a/kreditinformation/index.html
+++ b/kreditinformation/index.html
@@ -178,7 +178,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/kreditinformation..webp" alt="Kreditinformation för lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/kreditinformation.webp" alt="Kreditinformation för lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -500,7 +500,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Kreditinformationens betydelse för lån</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för kreditinformation lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för kreditinformation lån"></p>
 <p><p>I en värld där finansiell osäkerhet och lån är dagliga termer, är det av största vikt att förstå den information som påverkar dina ekonomiska beslut.  För många kan svårigheten att navigera i lånemarknaden leda till missförstånd och negativa konsekvenser. </p>
 <p> En insikt i kreditinformation kan därmed vara din bästa allierade. </p>
 <blockquote><p>Förståelse för din kreditinformation är nyckeln till bättre lån</p></blockquote>
@@ -697,7 +697,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med kreditinformation</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med kreditinformation"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med kreditinformation"></p>
 <ul>
 <li><strong>Förbättrad kreditvärdighet:</strong> Genom att förstå och övervaka din kreditinformation kan du identifiera områden som behöver förbättring. En stark kreditvärdighet ökar dina chanser att få lån till fördelaktiga villkor och lägre räntor.</li>
 <li><strong>Bättre lånevillkor:</strong> Med en god kreditinformation blir du mer attraktiv för långivare. Det kan resultera i högre lånebelopp och lägre räntor, vilket sparar pengar över tid.</li>
@@ -715,7 +715,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med kreditinformation</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med kreditinformation"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med kreditinformation"></p>
 <ul>
 <li><strong>Begränsad tillgång till lån:</strong> En låg kreditvärdighet kan göra det svårt att få lån godkända. Många långivare väljer att neka ansökningar från personer med betalningsanmärkningar, vilket begränsar dina finansiella möjligheter.</li>
 <li><strong>Högre räntor:</strong> Låntagare med svag kreditinformation riskerar att erbjudas lån med högre räntesatser. Detta kan leda till ökade kostnader över tid och betydande påverkan på din ekonomiska stabilitet.</li>
