--- a/kreditkontroll/index.html
+++ b/kreditkontroll/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/kreditkontroll-1..webp" alt="Kreditkontroll vid ansökan om ett lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/kreditkontroll-1.webp" alt="Kreditkontroll vid ansökan om ett lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -501,7 +501,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Kreditkontrollens vikt vid lån</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för kreditprövning"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för kreditprövning"></p>
 <p><p>Att navigera i lånedjungeln kan te sig överväldigande, men insikter om kreditkontroll kan göra resan mer hanterbar.  </p>
 <blockquote><p>En välgrundad låneansökan är grunden till en bra låneupplevelse</p></blockquote>
 <p> Det är avgörande att förstå att långivare noggrant granskar din kreditvärdighet, vilket innebär att varje detalj av din ekonomiska profil spelar en central roll.     </p>
@@ -659,7 +659,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med kreditkontroll</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med kreditkontroll"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med kreditkontroll"></p>
 <ul>
 <li><strong>Förbättrad kreditvärdighet:</strong> Regelbundna och ansvarsfulla betalningar bidrar till att förbättra din kreditvärdighet över tid. En högre kreditpoäng öppnar dörrar till bättre låneerbjudanden och lägre räntor.</li>
 <li><strong>Ökad låneansökningsframgång:</strong> Genom att förbereda en välstrukturerad låneansökan ökar du chansen att få lånet beviljat. Att demonstrera en stabil ekonomisk situation kan göra långivaren mer benägen att ge dig ett lån.</li>
@@ -677,7 +677,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med kreditkontroll</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med kreditkontroll"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med kreditkontroll"></p>
 <ul>
 <li><strong>Negativ påverkan på kreditvärdighet:</strong> Varje gång en långivare genomför en hård kreditupplysning kan det medföra en liten sänkning av ditt kreditbetyg. Om du ansöker om flera lån på kort tid kan dessa upplysningar ackumuleras och försämra din kreditprofil.</li>
 <li><strong>Tidskrävande process:</strong> Att förbereda och samla all nödvändig information för en låneansökan kan ta betydande tid. Den tidsåtgången kan kännas överväldigande, särskilt för dem som redan har en hektisk livsstil.</li>
