--- a/kreditscore/index.html
+++ b/kreditscore/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/01/kreditscore..webp" alt="Kreditscore- betyg på låntagare" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/01/kreditscore.webp" alt="Kreditscore- betyg på låntagare" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -508,7 +508,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Kreditscore: Nyckeln till lån.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för kreditscore-systemet"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för kreditscore-systemet"></p>
 <p><p>Att navigera i den finansiella världen kan vara en utmanande väg, särskilt när det kommer till att förstå kreditscore.  </p>
 <blockquote><p>Kreditscore avgör inte bara din lånepotential, utan formar även din ekonomiska framtid</p></blockquote>
 <p> Ditt kreditscore fungerar som en spegelbild av din ekonomiska tillförlitlighet och kan påverka allt från räntor till lånevillkor.     </p>
@@ -714,7 +714,7 @@ Till sist, skapa en realistisk budget som inkluderar dina månatliga betalningar
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med hög kreditscore</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med hög kreditscore"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med hög kreditscore"></p>
 <ul>
 <li><strong>Bättre lånevillkor:</strong> En hög kreditscore ökar dina chanser att få låna pengar på förmånliga villkor. Detta innebär ofta lägre räntor och mer flexibla återbetalningstider, vilket sparar pengar över tid.</li>
 <li><strong>Ökad låneansökningschans:</strong> När långivare bedömer din kreditvärdighet kommer en hög kreditscore att förbättra dina odds att få lånet beviljat. Det visar att du är en pålitlig låntagare med en stabil ekonomisk bakgrund.</li>
@@ -732,7 +732,7 @@ Till sist, skapa en realistisk budget som inkluderar dina månatliga betalningar
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med låg kreditscore</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med låg kreditscore"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med låg kreditscore"></p>
 <ul>
 <li><strong>Låg kreditvärdighet:</strong> En låg kreditscore kan leda till att du blir avvisad vid låneansökningar, vilket begränsar dina finansiella möjligheter. Det kan bli en ond cirkel där bristen på lån gör det svårt att förbättra din kreditprofil.</li>
 <li><strong>Högre räntor:</strong> Om din kreditscore är låg kan långivare ta ut betydligt högre räntor för att kompensera för den större risken. Detta leder ofta till att du betalar mycket mer över tid för samma lån än vad du skulle göra med en högre score.</li>
