--- a/kvallslan/index.html
+++ b/kvallslan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/Kvallslan-1..webp" alt="Kvällslån – snabblån med utbetalning kväll" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/Kvallslan-1.webp" alt="Kvällslån – snabblån med utbetalning kväll" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -758,7 +758,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Kvällslån för akuta behov</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för kvällslån och snabblån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för kvällslån och snabblån"></p>
 <p>I en värld där oväntade utgifter ständigt lurar runt hörnet kan ett lån på kvällen vara det tryggaste alternativet för omedelbar finansiell hjälp.  Tänk dig scenariot: du står på tröskeln till en kris mitt i natten. </p>
 <blockquote><p>Ofta är det de oväntade utgifterna som testar vår ekonomiska förmåga</p></blockquote>
 <p> I sådana stunder kan ett kvällslån vara din räddande ängel. Kvällslån erbjuder snabb tillgång till pengar när traditionella bankalternativ är stängda. </p>
@@ -1008,7 +1008,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med kvällslån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med kvällslån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med kvällslån"></p>
 <ul>
 <li><strong>Snabb utbetalning:</strong> Kvällslån erbjuder en omedelbar lösning på akuta finansiella behov. Många långivare kan genomföra utbetalningar inom bara några minuter efter godkännande av ansökan, vilket gör det möjligt att hantera oväntade kostnader snabbt.</li>
 <li><strong>Tillgänglighet dygnet runt:</strong> Med kvällslån kan du få tillgång till pengar även efter att bankerna har stängt. Denna tillgänglighet innebär att du kan låna när som helst på dygnet, vilket skapar flexibilitet för dem med oregelbundna arbetstider eller brådskande ärenden.</li>
@@ -1026,7 +1026,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med kvällslån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med kvällslån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med kvällslån"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Kvällslån är ofta kopplade till högre räntor jämfört med traditionella lån. Dessutom kan de extra kostnaderna snabbt ackumuleras, vilket kan bli en ekonomisk belastning för låntagaren.</li>
 <li><strong>Risk för skuldfällor:</strong> Den snabba tillgången till pengar kan uppmuntra till impulsiva beslut. Om du inte har en plan för återbetalning kan du lätt hamna i en skuldfälla, där du blir beroende av att låna ytterligare för att betala tillbaka tidigare lån.</li>
