--- a/laga-krav-pa-lan/index.html
+++ b/laga-krav-pa-lan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/09/hitta-lan-med-laga-krav..webp" alt="Hitta ett lån med låga krav" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/09/hitta-lan-med-laga-krav.webp" alt="Hitta ett lån med låga krav" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -883,7 +883,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Lån med låga krav väntar.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån med låga krav"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån med låga krav"></p>
 <p>I en snabb och föränderlig värld, där finansiella behov dyker upp när man minst anar det, söker många efter smidiga och tillgängliga lösningar.  Att hitta ett lån med låga krav kan öppna dörrar till ekonomiska möjligheter som tidigare verkade oåtkomliga. </p>
 <blockquote><p>Att låna ska inte vara ett hinder utan en väg till möjligheter</p></blockquote>
 <p> Dessa lån, som kännetecknas av flexibla villkor, är speciellt utformade för att möta behoven hos människor med varierande ekonomiska bakgrunder. </p>
@@ -1008,7 +1008,7 @@ Innan du bestämmer dig för att låna, är det avgörande att noggrant övervä
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån med låga krav</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån med låga krav"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån med låga krav"></p>
 <ul>
 <li>
         Tillgänglighet för alla: Lån med låga krav är utformade för att vara tillgängliga för en bredare grupp låntagare. Detta innebär att även personer med svag kreditvärdighet kan ha möjlighet att få lån.
@@ -1043,7 +1043,7 @@ Innan du bestämmer dig för att låna, är det avgörande att noggrant övervä
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån med låga krav</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån med låga krav"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån med låga krav"></p>
 <ul>
 <li>
         Högre räntor: Lån med låga krav kommer ofta med betydligt högre räntor än traditionella lån. Detta kan leda till att låntagarens totala kostnad för lånet blir mycket högre, vilket kan vara problematiskt vid återbetalning.
