--- a/lan-cafeverksamhet/index.html
+++ b/lan-cafeverksamhet/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/foretagslan/">företagslån
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/07/lan-till-cafeverksamhet..webp" alt="Företagslån för ett kafé " width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/07/lan-till-cafeverksamhet.webp" alt="Företagslån för ett kafé " width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -523,7 +523,7 @@ window.addEventListener(
   <td>Beror på bank</td>
   <td>10 000</td>
       <td>30 000 000</td>
-   <td><img alt=UC title=UC src='../../../localhost/laana_pengar/media/uc..webp'></td>	
+   <td><img alt=UC title=UC src='../../../localhost/laana_pengar/media/uc.webp'></td>	
     <td>I många fall samma dag</td>
 					   </tr>
 					  <th scope="row"><a href=https://lastoffer.net/capitalbox/>Capitalbox</a></th>
@@ -531,7 +531,7 @@ window.addEventListener(
   <td>Kassaflöde</td>
   <td>20 000</td>
       <td>3 500 000</td>
-   <td><img alt=UC title=UC src='../../../localhost/laana_pengar/media/uc..webp'></td>	
+   <td><img alt=UC title=UC src='../../../localhost/laana_pengar/media/uc.webp'></td>	
     <td>Inom 24 timmar</td>
 					   </tr>
 					  <th scope="row"><a href=https://lastoffer.net/opr/>OPR</a></th>
@@ -539,7 +539,7 @@ window.addEventListener(
   <td>Kreditbedömning</td>
   <td>30 000</td>
       <td>1 000 000</td>
-   <td><img alt=Creditsafe title=Creditsafe src='../../../localhost/laana_pengar/media/creditsafe..webp'></td>	
+   <td><img alt=Creditsafe title=Creditsafe src='../../../localhost/laana_pengar/media/creditsafe.webp'></td>	
     <td>Godkänt lån överförs direkt</td>
 					   </tr>
 					  <th scope="row"><a href=https://lastoffer.net/froda/>Froda</a></th>
@@ -547,7 +547,7 @@ window.addEventListener(
   <td>Försäljning</td>
   <td>0</td>
       <td>15 000 000</td>
-   <td><img alt=Creditsafe title=Creditsafe src='../../../localhost/laana_pengar/media/creditsafe..webp'></td>	
+   <td><img alt=Creditsafe title=Creditsafe src='../../../localhost/laana_pengar/media/creditsafe.webp'></td>	
     <td>På företagskontot samma dag </td>
 					   </tr>
 					  <th scope="row"><a href=https://lastoffer.net/fedelta/>Fedelta</a></th>
@@ -555,7 +555,7 @@ window.addEventListener(
   <td>Individuell</td>
   <td>25 000</td>
       <td>1 000 000</td>
-   <td><img alt=UC title=UC src='../../../localhost/laana_pengar/media/uc..webp'></td>	
+   <td><img alt=UC title=UC src='../../../localhost/laana_pengar/media/uc.webp'></td>	
     <td>Inom en arbetsdag</td>
 					   </tr>
 					    
@@ -567,7 +567,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Att få företagslån för kafé.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för företagslån kafé."></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för företagslån kafé."></p>
 <p>    Drömmer du om att öppna ditt eget kafé? Att förvandla en passion för kaffe och gemenskap till en blomstrande verksamhet är en spännande utmaning.  Emellertid, för att förverkliga denna vision kan det krävas mer än bara en god idé och en perfekt plats; det handlar också om att ha rätt resurser. </p>
 <p>    Här kommer företagslån för ett kafé in i bilden.  Dessa finansieringsalternativ erbjuder en oslagbar möjlighet för entreprenörer att säkerställa att de har kapitalet som behövs för att sätta sina planer i verket. </p>
 <p> Oavsett om det handlar om att köpa ny utrustning, anställa kvalificerad personal eller renovera inredningen, kan ett väl valt lån vara det som gör skillnad mellan succé och stagnation.     Den snabbrörliga kafébranschen kräver att ägare är beredda att agera på kort varsel. </p>
@@ -729,7 +729,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med företagslån för kafé</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med företagslån för kafé"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med företagslån för kafé"></p>
 <ul>
 <li>Ökad likviditet: Genom att ta ett företagslån för ditt kafé får du snabb tillgång till kapital, vilket kan hjälpa dig att hantera dagliga utgifter och oförutsedda kostnader. Detta ger dig trygghet och möjlighet att agera snabbt vid oväntade händelser.</li>
 <li>Möjlighet till investeringar: Med lån kan du investera i ny utrustning, som kaffemaskiner eller utemöbler. Dessa investeringar kan förbättra kundupplevelsen och öka din konkurrenskraft på marknaden.</li>
@@ -747,7 +747,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med företagslån för kafé</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med företagslån för kafé"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med företagslån för kafé"></p>
 <ul>
 <li>Ränta och avgifter: Företagslån kan komma med hög ränta och dolda avgifter, vilket ökar den totala kostnaden för lånet. En hög räntekostnad kan pressa ditt kassaflöde och göra det svårare att uppnå ekonomisk stabilitet.</li>
 <li>Risk för ökad skuldsättning: Att ta ett lån innebär att du åtar dig en skuld som måste återbetalas. Om din verksamhet inte går som planerat kan detta leda till en ond cirkel av skuldsättning som är svår att bryta.</li>
