--- a/lan-dator/index.html
+++ b/lan-dator/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/lana-pengar-till-en-ny-dator..webp" alt="Låna pengar till en ny dator" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/lana-pengar-till-en-ny-dator.webp" alt="Låna pengar till en ny dator" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -687,7 +687,7 @@ button.bleu {
 <h2>
 <div class="unskew">Låna till din dröm-dator.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån till datorer"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån till datorer"></p>
 <p>        I en värld där teknologi ständigt utvecklas, är behovet av en pålitlig och effektiv dator mer aktuellt än någonsin.  Att skaffa en ny dator kan kännas överväldigande, särskilt när det kommer till kostnader. </p>
 <p> Många känner sig fast i en ekonomisk snara, vilket gör att val av finansieringsmetoder blir extremt viktigt för att säkerställa en smidig övergång till modern teknologi.     </p>
 <blockquote><p>Att låna pengar till en ny dator är en investering i både framtiden och effektiviteten</p></blockquote>
@@ -859,7 +859,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med att låna till dator</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med att låna till dator"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med att låna till dator"></p>
 <ul>
 <li>Tillgång till modern teknologi: Genom att låna pengar kan du snabbt köpa en dator med den senaste teknologin, som förbättrar din arbetskapacitet och användarupplevelse. En kraftfull dator kan göra att du arbetar mer effektivt och ger dig möjlighet att hantera avancerade program och applikationer.</li>
 <li>Hantera stora kostnader: Att finansiera en ny dator med ett lån gör att du kan dela upp kostnaden i hanterbara månatliga avbetalningar. Det minskar den ekonomiska bördan och ger mer flexibilitet jämfört med att betala hela beloppet på en gång.</li>
@@ -877,7 +877,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med att låna till dator</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med att låna till dator"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med att låna till dator"></p>
 <ul>
 <li>Kostnaden för räntor: När du lånar pengar för att köpa en dator, betalar du ofta räntor som kan öka den totala kostnaden. Detta kan göra datorn betydligt dyrare på lång sikt än om du hade betalat hela beloppet i förskott.</li>
 <li>Möjlighet till skuldsättning: Att ta lån innebär en potentiell risk för att hamna i skuldfälla om man inte kan betala tillbaka i tid. Det kan leda till en stressig ekonomisk situation och påverka din kreditvärdighet negativt.</li>
