--- a/lan-dun-bradstreet/index.html
+++ b/lan-dun-bradstreet/index.html
@@ -177,7 +177,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/08/dun-bradstreet-lan..webp" alt="Lån som använder Dun &#038; Bradstreet" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/08/dun-bradstreet-lan.webp" alt="Lån som använder Dun &#038; Bradstreet" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -747,7 +747,7 @@ button.bleu {
 <h2>
 <div class="unskew">Möjligheter med D&#038;B lån idag</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för D&#038;B-lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för D&#038;B-lån"></p>
 <p><p>I en dynamisk affärsvärld där tillgång till kapital ofta är nyckeln till framgång, erbjuder Dun &#038; Bradstreet innovativa lånomlagningar för företag som strävar efter tillväxt och stabilitet. </p>
 <p> En möjlighet för de som har svårt att navigera i den traditionella finansieringsdjungeln, är D&#038;B:s lösningar både bärande och tillgängliga. </p>
 <blockquote><p>En smart investering kräver kloka val och rätt information</p></blockquote>
@@ -891,7 +891,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med D&#038;B-lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med D&#038;B-lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med D&#038;B-lån"></p>
 <ul>
 <li><strong>Snabbare lånebeslut:</strong> Med Dun &#038; Bradstreets effektiva tjänster kan företag få sina lånebesked på en bråkdel av tiden jämfört med traditionella bankprocesser. Det innebär att företagare snabbt kan agera på affärsmöjligheter utan att drabbas av långa väntetider.</li>
 <li><strong>Flexibla lånevillkor:</strong> D&#038;B erbjuder en rad lånealternativ som kan skräddarsys efter varje företags specifika behov. Detta gör det möjligt för företag att anpassa lånebelopp, återbetalningstider och räntesatser så att de passar deras unika situation.</li>
@@ -909,7 +909,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med D&#038;B-lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med D&#038;B-lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med D&#038;B-lån"></p>
 <ul>
 <li><strong>Kostnaderna kan vara högre:</strong> Lån via Dun &#038; Bradstreet kan ha högre avgifter och räntor jämfört med traditionella banklån. För företag som redan har en ansträngd ekonomi kan dessa extrakostnader påverka den totala lönsamheten negativt.</li>
 <li><strong>Krav på kreditupplysning:</strong> För att få lån via D&#038;B krävs det en kreditupplysning, vilket kan påverka kreditvärdigheten. Även om detta ger långivare insyn i företagets ekonomi, kan det också begränsa möjligheterna för företag med redan svag kreditprofil.</li>
