--- a/lan-med-bankid/index.html
+++ b/lan-med-bankid/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2016/09/lana-pengar-med-bank-id..webp" alt="Låna pengar med bank-id" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2016/09/lana-pengar-med-bank-id.webp" alt="Låna pengar med bank-id" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -687,7 +687,7 @@ button.bleu {
 <h2>
 <div class="unskew">Snabb och smidig låneprocess</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån med BankID"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån med BankID"></p>
 <p><p>Har du någonsin ställts inför en oväntad utgift som kräver omedelbar ekonomisk hjälp? Idag har digitalisering revolutionerat låneprocessen och gjort den snabbare och mer tillgänglig än någonsin. </p>
 <blockquote><p>Med Bank-ID har det aldrig varit enklare att låna</p></blockquote>
 <p> Genom att använda BankID kan du nu verifiera din identitet på ett smidigt sätt, vilket öppnar dörrarna till snabba lånealternativ. </p>
@@ -842,7 +842,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med att låna med BankID</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med att låna med BankID"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med att låna med BankID"></p>
 <ul>
 <li>Snabb handläggningstid: Genom att använda BankID kan hela låneprocessen hanteras nästan omedelbart. Ansökan behandlas effektivt, vilket reducerar väntetiden och ger dig snabbare tillgång till de pengar du behöver.</li>
 <li>Digital identitetsverifiering: BankID fungerar som ditt elektroniska ID-kort, vilket säkerställer att din identitet bekräftas på ett säkert sätt. Denna digitala metod minskar risken för bedrägerier, vilket är avgörande i den finansiella sektorn.</li>
@@ -860,7 +860,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med att låna med BankID</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med att låna med BankID"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med att låna med BankID"></p>
 <ul>
 <li>Begränsad tillgång för vissa: Inte alla har möjlighet att använda BankID, vilket kan exkludera dem som saknar en smartphone eller internetbank. Det kan särskilt drabba äldre personer eller de som är mindre tekniskt kunniga.</li>
 <li>Risk för överanvändning: Den snabba och lättillgängliga låneprocessen kan fresta låntagare att ta fler lån än de egentligen har råd med. Detta kan leda till en skuldspiral där ekonomin blir ohanterlig.</li>
