--- a/lan-med-bra-villkor/index.html
+++ b/lan-med-bra-villkor/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/lan-med-bra-villkor..webp" alt="Lån med bra villkor" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/lan-med-bra-villkor.webp" alt="Lån med bra villkor" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -685,7 +685,7 @@ button.bleu {
 <h2>
 <div class="unskew">Lån med bra villkor idag</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån med bra villkor"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån med bra villkor"></p>
 <p>    Att navigera genom lånevärlden kan kännas som att man simmar i ett obekant hav.  Många drömmer om att uppnå ekonomisk frihet, men vad de flesta inte inser är hur avgörande det är att välja lån med rätt villkor. </p>
 <blockquote><p>Att välja rätt lån är som att välja rätt väg – det formar din framtid. </p></blockquote>
 <p>I dagens samhälle, där oväntade utgifter kan dyka upp när som helst, är det enklare än någonsin att få tillgång till olika låneformer. </p>
@@ -844,7 +844,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån med bra villkor</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån med bra villkor"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån med bra villkor"></p>
 <ul>
 <li>Förmånlig ränta: Lån med bra villkor erbjuder ofta konkurrenskraftiga räntor, vilket kan spara dig pengar över tid. En lägre ränta innebär att dina månatliga betalningar kan bli mer hanterbara och att den totala kostnaden för lånet minskar.</li>
 <li>Flexibilitet i återbetalning: Många långivare erbjuder anpassningsbara återbetalningsalternativ som gör det möjligt för låntagare att välja en plan som passar deras ekonomi. Detta kan inkludera möjligheten att justera beloppet och frekvensen av betalningar.</li>
@@ -861,7 +861,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån med bra villkor</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån med bra villkor"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån med bra villkor"></p>
 <ul>
 <li>Höga räntor på snabblån: Snabblån kan ofta komma med betydligt högre räntor jämfört med traditionella lån. Detta kan leda till stora kostnader om lånet inte betalas tillbaka i tid.</li>
 <li>Risk för överbelåning: Låntagare kan frestas att ta flera lån samtidigt, vilket kan leda till en ohållbar ekonomisk situation. Överbelåning kan skapa svårigheter att hantera återbetalningar och leda till skulder som snabbt växer.</li>
