--- a/lan-med-direkt-utbetalning-seb/index.html
+++ b/lan-med-direkt-utbetalning-seb/index.html
@@ -178,7 +178,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/10/Lan-med-direkt-utbetalning-SEB..webp" alt="Lån med direkt utbetalning till SEB" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/10/Lan-med-direkt-utbetalning-SEB.webp" alt="Lån med direkt utbetalning till SEB" width="300" height="300" /></div>
 </div>
 <div class="rw"></div
 
@@ -707,7 +707,7 @@ button.bleu {
 <h2>
 <div class="unskew">Snabba lån med trygg utbetalning</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för snabblån till SEB"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för snabblån till SEB"></p>
 <p>        I en värld där tidsbrist och oväntade kostnader är en del av vardagen, kan det vara avgörande att ha tillgång till snabba finansiella lösningar.         </p>
 <blockquote><p>Tid är pengar, och ibland behöver man dem omedelbart</p></blockquote>
 <p>        Lån med direkt utbetalning till SEB erbjuder en effektiv väg för att snabbt hantera akuta ekonomiska behov, oavsett om det handlar om oförutsedda räkningar eller andra brådskande utgifter. </p>
@@ -896,7 +896,7 @@ Slutligen bör varje låntagare dessutom vara beredd på att skapa en budget som
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med snabblån via SEB</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Snabblån till SEB"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Snabblån till SEB"></p>
 <ul>
 <li>
         <strong>Snabb utbetalning:</strong> Lån med direkt utbetalning innebär att du kan få pengar på ditt SEB-konto samma dag som du ansöker. Detta är särskilt värdefullt i akuta situationer där du behöver tillgång till medel omedelbart, såsom vid oförutsedda räkningar eller nödvändiga inköp.
@@ -934,7 +934,7 @@ Slutligen bör varje låntagare dessutom vara beredd på att skapa en budget som
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med Snabblån till SEB</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Snabblån till SEB"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Snabblån till SEB"></p>
 <ul>
 <li>
         <strong>Höga räntor:</strong> Lån med direkt utbetalning tenderar ofta att ha högre räntor jämfört med traditionella lån. Detta beror på den korta löptiden och den snabba processen, vilket kan leda till att låntagarens totala kostnader blir betydande.
