--- a/lan-med-forsakring/index.html
+++ b/lan-med-forsakring/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2016/07/lana-pengar-med-forsakring..webp" alt="Låna pengar med försäkring" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2016/07/lana-pengar-med-forsakring.webp" alt="Låna pengar med försäkring" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -501,7 +501,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Trygghet genom låneskyddsförsäkring</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Lån med Försäkring"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Lån med Försäkring"></p>
 <p><p>Att navigera i den finansiella djungeln kan kännas överväldigande, men med rätt verktyg kan du i stället känna dig som en kapten i ditt eget skepp.  </p>
 <blockquote><p>Trygghet är den största rikedomen, särskilt när osäkerheter knackar på dörren</p></blockquote>
 <p> Att låna pengar med försäkring erbjuder en väg till ökad ekonomisk säkerhet som många ofta underskattar.     </p>
@@ -687,7 +687,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med ån med försäkringg</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån med försäkring"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån med försäkring"></p>
 <ul>
 <li><strong>Ekonomisk trygghet:</strong> Låneskyddsförsäkring ger ett viktigt skydd ifall oförutsedda händelser inträffar. Detta innebär att även vid arbetslöshet eller sjukdom kan du fortsätta att betala dina lånebetalningar utan oro.</li>
 <li><strong>Säkerhet för familjen:</strong> Om du skulle avlida betalar låneskyddet av hela eller delar av ditt lån. Detta skydd minskar den ekonomiska bördan för dina efterlevande och sikrar deras framtid.</li>
@@ -705,7 +705,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med ån med försäkring</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med ån med försäkring"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med ån med försäkring"></p>
 <ul>
 <li><strong>Kostnad:</strong> Låneskyddsförsäkringar innebär en extra månadskostnad som kan påverka din budget. För vissa låntagare kan detta bli en ekonomisk belastning, särskilt om de redan har begränsade resurser.</li>
 <li><strong>Begränsad täckning:</strong> Inte alla låneskydd erbjuder samma nivå av skydd. Vissa försäkringar täcker bara specifika situationer, som dödsfall, och utesluter andra händelser som arbetslöshet eller sjukdom.</li>
