--- a/lan-med-hog-beviljandegrad/index.html
+++ b/lan-med-hog-beviljandegrad/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/02/lan-med-hog-beviljandegrad..webp" alt="Lån med hög beviljandegrad" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/02/lan-med-hog-beviljandegrad.webp" alt="Lån med hög beviljandegrad" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -883,7 +883,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Lån som öppnar nya möjligheter</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån med hög beviljandegrad"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån med hög beviljandegrad"></p>
 <p><p>För många som sitter pyrt till erbjuder lån med hög beviljandegrad en livlina.  Med dessa lån är det möjligt att få tillgång till kapital trots en mindre än perfekt kreditvärdighet. </p>
 <blockquote><p>Finansiering ska inte vara en utmaning för den som behöver stöd</p></blockquote>
 <p> Denna typ av lån har blivit alltmer populär, och hjälper individer att navigera i mäskigt tveksamma tidsperioder. </p>
@@ -1021,7 +1021,7 @@ kförd i Sverige</li>
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån med hög beviljandegrad</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån med hög beviljandegrad"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån med hög beviljandegrad"></p>
 <ul>
 <li><strong>Hög beviljandegrad:</strong> Lån med hög beviljandegrad accepterar en bredare krets av låntagare, vilket gör dem tillgängliga för personer med lägre kreditvärdighet. Detta skapar en möjlighet för dem som tidigare har nekats lån att få den finansiering de behöver.</li>
 <li><strong>Snabb ansökningsprocess:</strong> Ansökningsproceduren för dessa lån är ofta snabb och enkel, vilket gör att låntagare kan få besked om sina ansökningar inom kort. Detta är avgörande i stressiga situationer där snabb tillgång till pengar krävs.</li>
@@ -1039,7 +1039,7 @@ kförd i Sverige</li>
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån med hög beviljandegrad</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån med hög beviljandegrad"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån med hög beviljandegrad"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Lån med hög beviljandegrad har ofta betydligt högre räntor jämfört med traditionella lån. Detta kan leda till omfattande kostnader över tid, vilket gör att låntagaren riskerar att hamna i en situation där skulden växer snabbare än de kan betala tillbaka.</li>
 <li><strong>Dolda avgifter:</strong> Många långivare inkluderar dolda avgifter som kan bli överraskande för låntagare. Dessa kostnader kan vara förseningsavgifter eller administrationsavgifter, vilket gör lånet ännu dyrare än vad som först verkar.</li>
