--- a/lan-med-hogst-trustpilot-betyg/index.html
+++ b/lan-med-hogst-trustpilot-betyg/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/07/lan-hogst-betyg-trustpilot..webp" alt="Lån med högst betyg på Trustpilot" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/07/lan-hogst-betyg-trustpilot.webp" alt="Lån med högst betyg på Trustpilot" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -799,7 +799,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Lån med utmärkta omdömen på Trustpilot</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån med högsta betyg"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån med högsta betyg"></p>
 <p><p>Att navigera i det ständigt föränderliga lånemarknaden kan vara överväldigande, men kvalitativa recensioner erbjuder en vägledning mot ekonomisk trygghet.  </p>
 <blockquote><p>Valet av långivare kan forma din ekonomiska framtid</p></blockquote>
 <p> Långivare med högst betyg på Trustpilot står i centrum för positiva omdömen och nöjda kunder. </p>
@@ -966,7 +966,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån med högsta betyg</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån med högsta betyg"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån med högsta betyg"></p>
 <ul>
 <li><strong>Kundrecensioner och betyg:</strong> Trustpilot samlar recensioner från riktiga kunder, vilket ger en autentisk inblick i långivarens service och pålitlighet. Genom att beakta dessa omdömen kan låntagare göra mer informerade val och undvika potentiella fallgropar.</li>
 <li><strong>Transparent information:</strong> Långivare med höga betyg tenderar att vara mer transparenta med sina lånevillkor, inklusive räntor och avgifter. Detta skapar förtroende och möjliggör för låntagare att förstå sina ekonomiska åtaganden fullt ut.</li>
@@ -984,7 +984,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån med högsta betyg</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån med högsta betyg"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån med högsta betyg"></p>
 <ul>
 <li><strong>Risk för överbelåning:</strong> En av de största nackdelarna med att ta lån är risken för överbelåning, vilket kan leda till ekonomisk stress. Många låntagare kanske inte fullständigt inser hur mycket de kommer att behöva betala tillbaka och kan hamna i en cykel av skuld.</li>
 <li><strong>Dolda avgifter:</strong> Trots transparens kan vissa långivare fortfarande dölja avgifter i sina avtal, vilket kan överraska låntagare vid återbetalning. Dessa dolda kostnader kan maskera det verkliga beloppet som behöver betalas och skapa finansiella överraskningar.</li>
