--- a/lan-med-skulder-hos-kronofogden/index.html
+++ b/lan-med-skulder-hos-kronofogden/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/09/lan-med-skulder-kronofogden-1..webp" alt="Lån med skulder hos kronofogden" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/09/lan-med-skulder-kronofogden-1.webp" alt="Lån med skulder hos kronofogden" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -883,7 +883,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Lån under svåra ekonomiska omständigheter</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån med skulder"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån med skulder"></p>
 <p><p>Nej, det handlar inte bara om att snabbt få fram pengar &#8211; det är även avgörande att hitta rätt lösningar.  </p>
 <blockquote><p>Att finna vägar genom ekonomiska svårigheter kan skapa nya möjligheter </p></blockquote>
 <p> Att <a href="https://lastoffer.net/ta-kontroll-over-skulder/">hantera skulder hos Kronofogden</a> är en situation som många står inför, men det behöver inte vara en omöjlig uppgift. </p>
@@ -1021,7 +1021,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån vid skulder</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån vid skulder"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån vid skulder"></p>
 <ul>
 <li><strong>Möjlighet till skuldfinansiering:</strong> Genom att låna pengar för att betala av skulder hos Kronofogden kan du få en mer hanterbar ekonomisk situation. Detta kan hjälpa dig att undvika att lånen växer med höga straffräntor och istället samla skulderna under en överskådlig betalningsplan.</li>
 <li><strong>Förbättrad kreditvärdighet:</strong> Att regelbundet betala tillbaka ett lån kommer att förbättra din kreditrating över tid. En bättre kreditvärdighet öppnar upp för fler lånemöjligheter i framtiden och kan ge mer fördelaktiga räntor.</li>
@@ -1039,7 +1039,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån vid skulder</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån vid skulder"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån vid skulder"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Lån för personer med skulder hos Kronofogden kommer ofta med högre räntor jämfört med traditionella lån. Detta beror på den ökade risken som långivarna tar, och dessa kostnader kan snabbt öka den totala skuldbördan.</li>
 <li><strong>Strikta lånevillkor:</strong> Långivare kan ställa upp tuffa krav för att bevilja lån till personer med betalningsanmärkningar. Detta kan innebära kortare återbetalningstider eller andra restriktioner som försvårar ekonomi och stressar låntagaren ytterligare.</li>
