--- a/lan-med-utbetalning-pa-helgen/index.html
+++ b/lan-med-utbetalning-pa-helgen/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2016/06/helglan..webp" alt="Helglån - lån med utbetalning på helgen" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2016/06/helglan.webp" alt="Helglån - lån med utbetalning på helgen" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -758,7 +758,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Helglån för snabb ekonomisk hjälp</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för helglån och utbetalning"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för helglån och utbetalning"></p>
 <p><p>I en värld där oväntade utgifter ofta kan överraska vem som helst, är det avgörande att ha en lösning till hands.  Helglån förefaller vara en strålande utväg för dem som hamnat i en ekonomisk knipa. </p>
 <blockquote><p>Omedelbar hjälp är den bästa hjälpen. </p></blockquote>
 <p> Med snabb tillgång till medel även under helger kan du hålla förvirringen borta när situationen är kritisk.   </p>
@@ -923,7 +923,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med helglån för dig</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med helglån för dig"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med helglån för dig"></p>
 <ul>
 <li><strong>Snabb utbetalning:</strong> Helglån erbjuder omedelbar tillgång till pengar, ofta inom minuter. Detta är oerhört värdefullt för dem som står inför akuta ekonomiska behov och inte har tid att vänta på traditionella banktjänster.</li>
 <li><strong>Tillgänglighet på helger:</strong> Många långivare specialiserar sig på att erbjuda lån även under lördagar och söndagar. Detta innebär att du kan få hjälp precis när du behöver det som mest, utan att vänta på veckans början.</li>
@@ -941,7 +941,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med helglån att överväga</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med helglån att överväga"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med helglån att överväga"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Helglån har ofta högre räntor än traditionella lån. Detta beror på den ökade risk som långivare tar när de erbjuder snabba utbetalningar utan utförlig kreditupplysning.</li>
 <li><strong>Kort återbetalningstid:</strong> Många helglån har korta återbetalningsperioder, vilket kan leda till stora månadsbetalningar. Detta kan skapa ekonomisk stress för låntagare som redan befinner sig i en pressad situation.</li>
