--- a/lan-som-alla-ar-nojda-med/index.html
+++ b/lan-som-alla-ar-nojda-med/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/lan-som-alla-ar-nojda-med..webp" alt="Lån som alla är nöjda med" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/lan-som-alla-ar-nojda-med.webp" alt="Lån som alla är nöjda med" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -738,7 +738,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Lån för en trygg framtid</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för nöjda låntagare"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för nöjda låntagare"></p>
 <p><p>Att navigera i den komplexa världen av lån kan kännas överväldigande, men rätt vägledning kan göra resan betydligt enklare.  I en tid där finansiella beslut väger tungt på våra liv, är det viktigare än någonsin att välja lånealternativ som verkligen möter våra behov. </p>
 <p>
 <blockquote><p>Det är inte bara pengarna som räknas, utan också ditt välbefinnande</p></blockquote>
@@ -851,7 +851,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med nöjda lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med nöjda lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med nöjda lån"></p>
 <ul>
 <li>Flexibilitet vid lånebelopp</li>
 <p>Med olika lånetyper kan du välja ett belopp som exakt motsvarar dina behov. Detta gör att du kan undvika att låna mer än vad som är nödvändigt, vilket är en viktig faktor för att hantera framtida återbetalningar.</p>
@@ -879,7 +879,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån för alla</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån för alla"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån för alla"></p>
 <ul>
 <li>Höga räntor</li>
 <p>Snabblån och lån utan säkerhet tenderar att ha högre räntor jämfört med traditionella banklån. Detta beror på den ökade risken för långivare, vilket kan leda till att låntagare betalar betydligt mer under lånets löptid.</p>
