--- a/lan-utan-avslag/index.html
+++ b/lan-utan-avslag/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/09/lan-utan-avslag..webp" alt="Låna pengar utan avslag" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/09/lan-utan-avslag.webp" alt="Låna pengar utan avslag" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -883,7 +883,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Låna pengar utan avslag</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån utan avslag"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån utan avslag"></p>
 <p><p>Har du någonsin känt dig maktlös när ekonomiska utmaningar dyker upp? Många har svårt att få lån godkända, och att upprepade gånger möta avslag kan vara frustrerande och demoraliserande. </p>
 <blockquote><p>Att förstå alternativen kan vara nyckeln till framgång.</p></blockquote>
 <p>I en värld där kreditvärdighet ofta avgör våra möjligheter att låna, öppnar sig nya dörrar för dem med mindre traditionella profiler. </p>
@@ -1058,7 +1058,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån utan avslag</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån utan avslag"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån utan avslag"></p>
 <ul>
 <li>Ökad tillgänglighet till lån: Lån utan avslag är designade för att hjälpa personer med olika ekonomiska bakgrunder. Det innebär att fler kan få tillgång till nödvändig finansiering, oavsett tidigare kreditproblem.</li>
 <li>Snabbare behandlingstider: Många långivare som erbjuder lån utan avslag kan ge snabba beslut, vilket gör det möjligt för låntagare att få pengar snabbt. Detta kan vara avgörande vid akuta ekonomiska situationer där tid är en kritisk faktor.</li>
@@ -1076,7 +1076,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån utan avslag</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån utan avslag"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån utan avslag"></p>
 <ul>
 <li>Högre räntor: Lån utan avslag tenderar ofta att ha betydligt högre räntor. Detta kan leda till att den totala kostnaden för lånet blir avsevärt högre över tid, vilket kan påverka låntagarens ekonomi negativt.</li>
 <li>Kortare återbetalningstider: Många långivare erbjuder lån med kortare återbetalningstider, vilket kan sätta en press på låntagaren. Detta kan resultera i högre månadskostnader och öka risken för försenade betalningar.</li>
