--- a/lan-utan-uc/index.html
+++ b/lan-utan-uc/index.html
@@ -181,7 +181,7 @@ Publicerat i <a href="https://lastoffer.net/category/utan-uc/">Utan UC</a>		</sp
 <div class="row">
 </div>
 <div class="row">
-<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2016/06/lana-pengar-utan-uc..webp" alt="låna pengar utan uc" width="300" height="300" /></div>
+<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2016/06/lana-pengar-utan-uc.webp" alt="låna pengar utan uc" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
