--- a/lan-uten-sikkerhet/index.html
+++ b/lan-uten-sikkerhet/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lane-penger/">låne penger<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/12/lan-uten-sikkerhet..webp" alt="Lån uten sikkerhet" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/12/lan-uten-sikkerhet.webp" alt="Lån uten sikkerhet" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -502,7 +502,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Mulighetenes frihet med lån</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Forklaring for lån uten sikkerhet"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Forklaring for lån uten sikkerhet"></p>
 <p>Når man står overfor økonomiske beslutninger, er det ofte lett å bli overveldet av de mange alternativene som finnes.  Når det kommer til finansiering, har lån uten sikkerhet blitt en populær løsning for mange som ønsker umiddelbar tilgang til kapital uten å måtte sette egne verdier på spill. </p>
 <blockquote><p>«Lån uten sikkerhet gir frihet til å forfølge dine drømmer uten bindinger</p></blockquote>
 <p> I motsetning til tradisjonelle lån, hvor eiendom og andre eiendeler fungerer som pant, gir lån uten sikkerhet (eller forbrukslån) en bemerkelsesverdig fleksibilitet. </p>
@@ -729,7 +729,7 @@ Det krever en grundig overveielse for å navigere godt i prosessen med lån uten
 <div class="row forulempe">
 <div class="cell positiv">
 <h3>Fordeler med lån uten sikkerhet</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fordeler med lån uten sikkerhet"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fordeler med lån uten sikkerhet"></p>
 <ul>
 <li><strong>Ingen sikkerhet kreves:</strong> Lån uten sikkerhet gir deg friheten til å låne penger uten å måtte pantsette eiendeler. Dette gjør det lettere for folk som ikke eier bolig eller har tilstrekkelig egenkapital å få tilgang til nødvendig kapital.</li>
 <li><strong>Rask søknadsprosess:</strong> Søknaden for lån uten sikkerhet er ofte raskere og mindre byråkratisk enn tradisjonelle lån. Du kan normalt få svar på søknaden din innen kort tid, noe som er gunstig når du har akutte behov.</li>
@@ -747,7 +747,7 @@ Det krever en grundig overveielse for å navigere godt i prosessen med lån uten
 <div class="row forulempe">
 <div class="cell negativ">
 <h3>Ulemper med lån uten sikkerhet</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Ulemper med lån uten sikkerhet"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Ulemper med lån uten sikkerhet"></p>
 <ul>
 <li><strong>Høyere rente:</strong> Lån uten sikkerhet kommer ofte med høyere renter sammenlignet med sikrede lån. Dette kan gjøre disse lånene dyrere over tid, spesielt hvis de ikke betales tilbake raskt.</li>
 <li><strong>Kortere nedbetalingstid:</strong> Nedbetalingstiden for lån uten sikkerhet er vanligvis kortere, noe som kan bety høyere månedlige utgifter. Dette kan føre til en økonomisk belastning hvis du ikke har en solid plan for tilbakebetaling.</li>
