--- a/lana-en-tusenlapp/index.html
+++ b/lana-en-tusenlapp/index.html
@@ -181,7 +181,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2016/07/lana-1000-kronor..webp" alt="Låna 1000 kronor" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2016/07/lana-1000-kronor.webp" alt="Låna 1000 kronor" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -887,7 +887,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Smidiga lösningar för ekonomiska utmaningar.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån på 1000 kr"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån på 1000 kr"></p>
 <p><p>I en värld där finansiella utmaningar ofta uppstår utan förvarning kan små lån utgöra en livlina.  </p>
 <blockquote><p>Ögonblick av kris förtjänar snabba lösningar</p></blockquote>
 <p> Att låna 1000 kronor är en smidig och beprövad metod för att hantera oväntade kostnader, oavsett om det handlar om en trasig bil eller en plötslig räkning. </p>
@@ -1043,7 +1043,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med att låna 1000 kr</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med att låna 1000 kr"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med att låna 1000 kr"></p>
 <ul>
 <li><strong>Snabb tillgång till medel:</strong> Att låna 1000 kronor ger dig omedelbar likviditet när du behöver det som mest. Processen är ofta så snabb att pengarna kan finnas på ditt konto samma dag, vilket gör det möjligt att hantera akuta kostnader utan dröjsmål.</li>
 <li><strong>Minimal administrativ börda:</strong> Ansökningsproceduren är vanligtvis enkel och rättfram. Med digitala plattformar behöver du bara fylla i en kort online-ansökan, utan att behöva samla in och skicka in omfattande dokumentation.</li>
@@ -1061,7 +1061,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med att låna 1000 kr</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med att låna 1000 kr"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med att låna 1000 kr"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Lån på mindre belopp kan ofta innefatta högre räntor jämfört med större lån. Detta kan leda till att det totala beloppet att återbetala blir betydligt högre än vad som initialt lånas.</li>
 <li><strong>Korta återbetalningstider:</strong> Många snabblån har korta återbetalningstider, vilket kan vara stressande. Om du inte är beredd kan detta leda till finansiella påfrestningar och eventuellt ytterligare skuldsättning.</li>
