--- a/lana-fran-nischbank/index.html
+++ b/lana-fran-nischbank/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/09/lan-nischbank..webp" alt="Låna från nischbank" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/09/lan-nischbank.webp" alt="Låna från nischbank" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -686,7 +686,7 @@ button.bleu {
 <h2>
 <div class="unskew">Nischbanker: Din väg till lån</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån från nischbank"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån från nischbank"></p>
 <p><p>Som du säkert märkt blir det allt fler nischbanker och det är ett segment inom bank- och finans där utvecklingen går snabbt framåt.  Det här är till stor glädje för alla som haft svårigheter att komma framåt med vanliga banktjänster, för nischbankerna kan erbjuda en välkommen livlina. </p>
 <blockquote><p>Den som inte är villig att riskera något, riskerar allt</p></blockquote>
 <p>Det specialiserade serviceutbudet gör dem till en attraktiv partner för låntagare med olika behov.  Nischbanker har ofta förmågan att anpassa sina lån och villkor på ett sätt som storbankerna sällan kan. </p>
@@ -803,7 +803,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med att låna från nischbank</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med att låna från nischbank"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med att låna från nischbank"></p>
 <ul>
 <li><strong>Skräddarsydda lånevillkor:</strong> Nischbanker har en förmåga att anpassa sina lånevillkor efter individuella behov. Detta gör att låntagare kan hitta lösningar som är bättre anpassade till deras specifika ekonomiska situation.</li>
 <li><strong>Snabb ansökningsprocess:</strong> Många nischbanker erbjuder en digital ansökningsprocess som är både snabb och effektiv. Detta innebär att låntagare kan få godkännande och utbetalning mycket snabbare än hos traditionella banker.</li>
@@ -821,7 +821,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med att låna från nischbank</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med att låna från nischbank"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med att låna från nischbank"></p>
 <ul>
 <li><strong>Högre räntor:</strong> Nischbanker tenderar att erbjuda högre räntor jämfört med storbanker, vilket kan innebära högre kostnader för låntagaren. Detta kan särskilt påverka dem med stora lån eller långsiktiga återbetalningsplaner.</li>
 <li><strong>Begränsat utbud av tjänster:</strong> Nischbanker erbjuder ofta ett begränsat utbud av finansielle tjänster, vilket innebär att kunder som söker fler alternativ kan behöva vända sig till andra institutioner. Detta kan leda till att kunder behöver interagera med flera olika banker för att tillgodose alla sina behov.</li>
