--- a/lana-pengar-anonymt/index.html
+++ b/lana-pengar-anonymt/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/utan-uc/">Utan UC</a>		</sp
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/09/lana-pengar-anonymt..webp" alt="Låna pengar anonymt" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/09/lana-pengar-anonymt.webp" alt="Låna pengar anonymt" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -857,7 +857,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Låna pengar med diskretion och trygghet.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Anonyma Lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Anonyma Lån"></p>
 <p><p>I en värld där osäkerhet och snabba utgifter är vardag, har möjligheten att låna pengar anonymt blivit en verklig räddning för många.  Känslan av att ha kontroll över sin ekonomiska framtid och kunna hantera oväntade kostnader utan att blottlägga sin privata ekonomi är ovärderlig. </p>
 <blockquote><p>Diskretion i ekonomin är nyckeln till trygghet.</p></blockquote>
 <p>Med digitaliseringens framfart har det blivit både enklare och snabbare att ansöka om lån utan att behöva känna oro för att ens ekonomiska situation ska bli offentlig. </p>
@@ -1010,7 +1010,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med anonyma Lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Anonyma Lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Anonyma Lån"></p>
 <ul>
 <li>Ingen registrering hos UC: Att låna utan att registreras hos Upplysningscentralen (UC) skyddar din kreditvärdighet. Ingen kreditupplysning innebär att tidigare lån förblir dolda, vilket ger en bättre förhandlingsposition för framtida lån.</li>
 <li>Snabba utbetalningar: Många långivare erbjuder lån med snabb utbetalning, ofta inom timmar. Detta är helt avgörande för att hantera akuta utgifter, som sjukvård eller reparationer, utan att behöva vänta flera dagar.</li>
@@ -1028,7 +1028,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med anonyma Lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Anonyma Lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Anonyma Lån"></p>
 <ul>
 <li>Höga räntor: Anonyma lån har ofta högre räntor jämfört med traditionella banklån. Detta kan leda till betydande kostnader på lång sikt, särskilt om lånet inte återbetalas inom den avtalade tiden.</li>
 <li>Kortare återbetalningstider: Många långivare erbjuder anonyma lån med kortare återbetalningstider. Detta innebär att låntagaren snabbt måste hantera sin ekonomi, vilket kan skapa extra stress och press under återbetalningsperioden.</li>
