--- a/lana-pengar-att-kopa-hast/index.html
+++ b/lana-pengar-att-kopa-hast/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2018/05/lana-pengar-till-hast..webp" alt="Låna pengar för att köpa häst" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2018/05/lana-pengar-till-hast.webp" alt="Låna pengar för att köpa häst" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -678,7 +678,7 @@ button.bleu {
 <h2>
 <div class="unskew">Låt drömmen om häst bli verklighet</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för att låna till häst"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för att låna till häst"></p>
 <p><p>Drömmen om att äga en häst föder en känsla av frihet och glädje som många bara kan fantisera om.  För många entusiaster är det inte bara en hobby; det är en livsstil.  Att investera i en häst är dock en betydande ekonomisk åtagande, och det ställer krav på noggrann planering. </p>
 <blockquote><p>Att äga en häst är att investera i en ovärderlig relation med naturen</p></blockquote>
 <p>För att kunna förverkliga denna dröm är det ofta nödvändigt att överväga att <a href="https://lastoffer.net/">låna pengar</a>.  Många långivare erbjuder skräddarsydda lösningar som gör det möjligt att finansiera inte bara inköpet av hästen utan även de tillbehör och utgifter som följer med hästägandet. </p>
@@ -786,7 +786,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med att låna till häst</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med att låna till häst"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med att låna till häst"></p>
 <ul>
 <li><strong>Ökad livskvalitet:</strong> Att äga en häst kan avsevärt förbättra livskvaliteten genom att erbjuda en meningsfull sysselsättning. Den tid som spenderas tillsammans med en häst kan ge både fysisk och mental avkoppling.</li>
 <li><strong>Fysisk aktivitet:</strong> Hästägande innebär regelbunden fysisk aktivitet, vilket bidrar till en aktiv livsstil. Ridsport är både en utmanande och rolig träning som stärker muskler och kondition.</li>
@@ -804,7 +804,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med att låna till häst</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med att låna till häst"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med att låna till häst"></p>
 <ul>
 <li><strong>Betydande ekonomiska kostnader:</strong> Att köpa en häst är en stor ekonomisk investering som kan kosta över 50 000 kronor. Dessutom tillkommer löpande utgifter för stallhyra, foder och veterinärvård, vilket kan göra hästägande till en dyr hobby.</li>
 <li><strong>Tidskrävande engagemang:</strong> Att ta hand om en häst kräver mycket tid och engagemang, vilket kan påverka andra aspekter av ditt liv. Dagsrutiner kan bli betydligt mer komplicerade, speciellt under tävlingssäsonger.</li>
