--- a/lana-pengar-betalningsanmarkning/index.html
+++ b/lana-pengar-betalningsanmarkning/index.html
@@ -166,7 +166,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2019/03/lana-pengar-med-betalningsanmarkning..webp" alt="Låna pengar med betalningsanmärkning" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2019/03/lana-pengar-med-betalningsanmarkning.webp" alt="Låna pengar med betalningsanmärkning" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -869,7 +869,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Låna trots betalningsanmärkningar &#8211; det går!</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån med anmärkning"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån med anmärkning"></p>
 <p><p>I en värld där oväntade utgifter kan dyka upp när som helst är det av största vikt att ha tillgång till finansiella resurser.  Många människor finner sig i en situation där betalningsanmärkningar skapar hinder för ekonomiska möjligheter. </p>
 <blockquote><p>Det är inte misslyckanden som definierar oss, utan hur vi reser oss efter dem. </p></blockquote>
 <p> Att förstå att det finns alternativ även i svåra tider kan vara en stor lättnad. </p>
@@ -1069,7 +1069,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån med anmärkning</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån med anmärkning"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån med anmärkning"></p>
 <ul>
 <li>Tillgång till snabblån: Alternativa långivare erbjuder snabblån, vilket gör det möjligt att få pengar snabbt vid akuta behov. Detta kan vara ovärderligt när oförutsedda utgifter dyker upp, såsom reparationer eller medicinska kostnader.</li>
 <li>Flexibla kreditvillkor: Många långivare är villiga att anpassa sina lånevillkor baserat på låntagarens individuella situation. Detta gör det ofta enklare att förhandla om betalningsvillkor och löptid, vilket kan leda till mer hanterbara månadskostnader.</li>
@@ -1086,7 +1086,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån med anmärkning</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån med anmärkning"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån med anmärkning"></p>
 <ul>
 <li>Höga räntor: Lån med betalningsanmärkningar innebär ofta betydligt högre räntor än vanligt. Detta beror på den ökade risken som långivare tar och kan leda till att totalkostnaden för lånet blir mycket högre än planerat.</li>
 <li>Begränsade lånebelopp: Många långivare som erbjuder lån till personer med betalningsanmärkningar begränsar lånebeloppet. Detta kan göra det svårt att få tillräckliga medel för större utgifter eller investeringar, vilket begränsar ekonomisk flexibilitet.</li>
