--- a/lana-pengar-fran-utlandet/index.html
+++ b/lana-pengar-fran-utlandet/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2017/06/lan-fran-utlandet..webp" alt="Låna pengar när man är utomlands" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2017/06/lan-fran-utlandet.webp" alt="Låna pengar när man är utomlands" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -885,7 +885,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Låna pengar enkelt utomlands.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån utomlands."></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån utomlands."></p>
 <p>    Att navigera i den finansiella djungeln kan vara en utmaning, särskilt när du befinner dig i ett främmande land.  Det finns emellertid möjligheter att låna pengar, även när avståndet mellan dig och hemmet är långt. </p>
 <p> Här är vad du bör veta för att göra processen smidigare.     </p>
 <blockquote><p>Att ta kloka finansiella beslut öppnar dörrar till din framtid </p></blockquote>
@@ -1040,7 +1040,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med att låna utomlands</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med att låna utomlands"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med att låna utomlands"></p>
 <ul>
 <li><strong>Enkel ansökningsprocess:</strong> Att ansöka om lån från en svensk långivare medan du är utomlands är ofta en smidig process. Med hjälp av Bank-ID kan du snabbt legitimera dig utan att behöva besöka en bankpersonligt.</li>
 <li><strong>Tillgång till svensk valuta:</strong> Genom att låna från en svensk bank kan du få medel i svenska kronor, vilket eliminerar osäkerhet kopplad till valutakonvertering och växlingskurser. Detta gör det enklare att planera din budget utomlands.</li>
@@ -1058,7 +1058,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med att låna utomlands</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med att låna utomlands"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med att låna utomlands"></p>
 <ul>
 <li><strong>Högre räntor:</strong> Lån från svenska långivare kan ofta ha högre räntor jämfört med lånemöjligheter i det land där du befinner dig. Detta kan göra det dyrare att låna pengar, särskilt om det handlar om kortfristiga lån som snabblån.</li>
 <li><strong>Kräver stabil inkomst:</strong> Många långivare ställer krav på en stabil och deklarerad inkomst i Sverige. Detta kan vara problematiskt för dem som befinner sig utomlands och kanske arbetar lokalt utan en svensk inkomstbas.</li>
