--- a/lana-pengar-kryptovaluta/index.html
+++ b/lana-pengar-kryptovaluta/index.html
@@ -488,7 +488,7 @@ window.addEventListener(
 </h2>
 </div>
 <div class="cell">
-<p><img decoding="async" style="width: 30px;height: 30px;margin: 5px;padding: 10px;background: #e8e8e8;border-radius: 100%/10px 10px 10px 10px" src="../media/glodlampa..webp" alt="Förklaring kryptolån" /></p>
+<p><img decoding="async" style="width: 30px;height: 30px;margin: 5px;padding: 10px;background: #e8e8e8;border-radius: 100%/10px 10px 10px 10px" src="../media/glodlampa.webp" alt="Förklaring kryptolån" /></p>
 <p>Dumt att låna pengar för att köpa kryptovaluta? Det beror på hur man ser på saken. De flesta lån används till konsumtion och köp som garanterat inte kommer att ge någon vinst så att <a href="https://lastoffer.net/lana-pengar-till-en-investering/">låna pengar till en investering</a> som förvisso har väldigt hög risk men kan ge stora vinster är jämfört med vad folk annars gör med sina lån inte så dumt som det först kan låta.</p>
 <p>Vad är egentligen dummast? Att fortfarande betala av på en semesterresa som man gjorde för flera år sedan eller att man tog chansen att göra en investering som gick åt skogen? Man måste våga för att vinna.</p>
 <p><span class="gulmark">Just nu är det lättast att få ett bra lån hos: <a href="https://lastoffer.net/lanekoll/">Lånekollen</a></span></p>
