--- a/lana-pengar-lag-ranta/index.html
+++ b/lana-pengar-lag-ranta/index.html
@@ -178,7 +178,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/07/lana-pengar-lag-ranta..webp" alt="Låna pengar med låg ränta" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/07/lana-pengar-lag-ranta.webp" alt="Låna pengar med låg ränta" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -684,7 +684,7 @@ button.bleu {
 <h2>
 <div class="unskew">Att få lån med låg ränta</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Lån med Låg Ränta"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Lån med Låg Ränta"></p>
 <p>Vi har alla råkat ut för oväntade utgifter som ofta har en vana att dyka upp när som helst. I ett sådant läge är det avgörande att ha tillgång till effektiva finansiella lösningar.  Att kunna låna pengar med låg ränta ger en fantastisk möjlighet att hantera oväntade kostnader utan att skapa en betydande belastning på ekonomin. </p>
 <p>    Att ta kloka beslut kring lån kan kraftigt påverka din ekonomiska framtid.  När du får möjlighet att välja lån med låga räntor, kan detta leda till betydande besparingar över tid.  Det handlar om att välja rätt alternativ och förstå vad som är bäst för din situation. </p>
 <p>    Många svenskar står inför utmaningen att navigera i en djungel av låneprodukter och villkor.  Genom att vara välinformerad och göra jämförelser bland olika långivare, kan du maximera dina chanser att hitta det mest fördelaktiga lånet. </p>
@@ -804,7 +804,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån med låg ränta</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån med låg ränta"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån med låg ränta"></p>
 <ul>
 <li>Förmånlig kostnad: Lån med låg ränta innebär att du betalar mindre i räntekostnader över tid. Detta kan leda till betydande besparingar, särskilt om lånet sträcker sig över flera år.</li>
 <li>Ökad ekonomisk stabilitet: Genom att låna till lägre kostnader kan du planera och budgetera mer effektivt. Det ger en trygghet i din vardag som gör det enklare att hantera andra utgifter.</li>
@@ -822,7 +822,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån med låg ränta</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån med låg ränta"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån med låg ränta"></p>
 <ul>
 <li>Höga krav på kreditvärdighet: Lån med låg ränta riktar sig ofta till personer med utmärkt kreditvärdighet. Om din kreditprofil inte uppfyller långivarens krav kan du gå miste om de bästa lånevillkoren.</li>
 <li>Eventuella dolda avgifter: Vissa långivare kan ha avgifter som inte är tydligt angivna i låneavtalet. Detta kan leda till att den totala kostnaden för lånet blir högre än förväntat, vilket kan påverka din ekonomiska planering negativt.</li>
