--- a/lana-pengar-med-dalig-scoring/index.html
+++ b/lana-pengar-med-dalig-scoring/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/09/lana-pengar-med-dalig-scoring..webp" alt="Låna pengar med dålig scoring" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/09/lana-pengar-med-dalig-scoring.webp" alt="Låna pengar med dålig scoring" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -895,7 +895,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Låna pengar trots låg scoring</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån med låg scoring"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån med låg scoring"></p>
 <p><p>Vi delar synen som många av våra klienter har &#8211; i värld där finansiell stabilitet oftast är en grundpelare för personlig framgång, kan en svag kreditprofil kännas som en hämsko. </p>
 <blockquote><p>En svag scoring är inte en slutpunkt, utan en möjlighet till återuppbyggnad</p></blockquote>
 <p><p>Att <a href="https://lastoffer.net/">låna pengar</a> med dålig scoring är en utmaning, men det är inte omöjligt. Enligt vår erfarenhet är många långivare beredda att erbjuda skräddarsydda lösningar för dem som tidigare har haft ekonomiska bekymmer. </p>
@@ -1090,7 +1090,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån trots låg scoring</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån trots låg scoring"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån trots låg scoring"></p>
 <ul>
 <li><strong>Snabb tillgång till medel:</strong> Sms-lån ger oftast en omedelbar utbetalning, vilket är ovärderligt under akuta ekonomiska situationer. Du kan få pengarna på ditt konto inom några timmar och lösa problem direkt.</li>
 <li><strong>Flexibla lånebelopp:</strong> Många långivare erbjuder ett brett spann av lånebelopp som gör det lätt att anpassa lånet efter dina specifika behov. Du kan välja att låna en mindre summa för att täcka en räkning istället för att ta ett stort lån.</li>
@@ -1108,7 +1108,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån vid låg scoring</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån vid låg scoring"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån vid låg scoring"></p>
 <ul>
 <li><strong>Hög ränta:</strong> Lån för personer med låg kreditvärdighet kommer ofta med betydligt högre räntor jämfört med traditionella lån. Detta kan leda till att lånet blir dyrare att återbetala över tid, vilket kan förvärra din ekonomiska situation.</li>
 <li><strong>Kort återbetalningstid:</strong> Många sms-lån har relativt korta återbetalningstider, vilket kan sätta press på din ekonomi. Det kan vara svårt att få ihop tillräckligt med medel för att betala tillbaka i tid, vilket kan resultera i ytterligare avgifter.</li>
