--- a/lana-pengar-med-hog-skuldkvot/index.html
+++ b/lana-pengar-med-hog-skuldkvot/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2018/09/lana-pengar-med-hog-skuldkvot-1..webp" alt="Låna pengar med hög skuldkvot" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2018/09/lana-pengar-med-hog-skuldkvot-1.webp" alt="Låna pengar med hög skuldkvot" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -883,7 +883,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Låna smart trots hög skuldkvot.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån med hög skuldkvot"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån med hög skuldkvot"></p>
 <p><p>Att navigera i lånefinansieringen kan kännas som att vandra genom en snårig skog av regler och kriterier.  För individer med en hög skuldkvot är det särskilt avgörande att förstå de unika utmaningar och möjligheter som erbjuds. </p>
 <blockquote><p>En medveten låntagare är den mest framgångsrika låntagaren</p></blockquote>
 <p> Att låna med en hög skuldkvot kräver en genomtänkt strategi för att kunna hantera ekonomiska belastningar. </p>
@@ -1011,7 +1011,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån och hög skuldkvot</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån och hög skuldkvot"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån och hög skuldkvot"></p>
 <ul>
 <li><strong>Flexibilitet i lånealternativ:</strong> Låntagare med hög skuldkvot har tillgång till ett bredare spektrum av lånealternativ, inklusive snabblån och samlingslån. Detta kan hjälpa dem att hantera ekonomiska utmaningar mer effektivt.</li>
 <li><strong>Möjlighet till refinansiering:</strong> Om du redan har en hög skuldkvot kan refinansiering av befintliga lån minska månadskostnaderna. Detta kan leda till en mer hanterbar skuldsituation och ökad likviditet.</li>
@@ -1029,7 +1029,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån och hög skuldkvot</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån och hög skuldkvot"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån och hög skuldkvot"></p>
 <ul>
 <li><strong>Ökade amorteringskrav:</strong> Låntagare med hög skuldkvot kan bli föremål för strängare amorteringsregler, vilket resulterar i högre månadskostnader. Detta kan skapa en pressad ekonomisk situation och öka risken för betalningsproblem.</li>
 <li><strong>Lägre beviljandegrad:</strong> Med en hög skuldkvot minskar ofta chansen att få lån beviljade, även för dem med stabila inkomster. Många långivare har egna gränser som kan försvåra möjligheterna till godkännande.</li>
