--- a/lana-pengar-med-mobilen/index.html
+++ b/lana-pengar-med-mobilen/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2016/12/telefonlan..webp" alt=" Telefonlån – låna pengar med mobilen" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2016/12/telefonlan.webp" alt=" Telefonlån – låna pengar med mobilen" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -885,7 +885,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Låna snabbt och enkelt via mobilen.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för telefonlån i mobilen."></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för telefonlån i mobilen."></p>
 <p>    Välkommen till en värld av individuella <a href="https://lastoffer.net/lanelosningar/">finansieringslösningar</a>! I en tid där snabba beslut och akuta behov är en del av vardagen, framstår telefonlån som en lysande väg till betalningsfrihet. </p>
 <p> Med ett lån via din mobiltelefon kan du hantera oförutsedda utgifter med lätthet och snabbhet.     </p>
 <blockquote><p>Tiden är avgörande, och telefonlån ger dig omedelbar ekonomisk hjälpen du behöver</p></blockquote>
@@ -1124,7 +1124,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med telefonlån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med telefonlån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med telefonlån"></p>
 <ul>
 <li><strong>Snabb ansökningsprocess:</strong> Telefonlån erbjuder en oslagbar hastighet när det kommer till ansökan. Med möjlighet att fylla i formuläret på din mobil tar det oftast mindre än en minut att få en bekräftelse.</li>
 <li><strong>Direktutbetalning:</strong> Många långivare erbjuder omedelbara utbetalningar, vilket innebär att pengarna kan finnas på ditt konto inom 15 minuter. Detta är särskilt fördelaktigt vid plötsliga utgifter där tid är av största vikt.</li>
@@ -1142,7 +1142,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med telefonlån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med telefonlån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med telefonlån"></p>
 <ul>
 <li><strong>Högre räntor:</strong> Telefonlån har vanligtvis högre räntor jämfört med traditionella banklån. Detta beror på den ökade risken långivarna tar genom att inte kräva säkerhet och den snabba hanteringen av lånen.</li>
 <li><strong>Kort återbetalningstid:</strong> Många telefonlån har korta löptider, vilket kan göra det utmanande för låntagare att återbetala i tid. Att behöva betala tillbaka lånet snabbt kan leda till ekonomisk stress och eventuella förstärkningar av skulder.</li>
