--- a/lana-pengar-till-hyran/index.html
+++ b/lana-pengar-till-hyran/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/01/lana-pengar-till-hyran..webp" alt="Låna pengar till hyran" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/01/lana-pengar-till-hyran.webp" alt="Låna pengar till hyran" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -885,7 +885,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Att hantera hyreskostnader smart.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån till hyran"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån till hyran"></p>
 <p><p>Att möta en oväntad ekonomisk utmaning kan vara både skrämmande och överväldigande.  Med hyran som en av de mest pressande månatliga kostnaderna är det inte ovanligt att behöva överväga alternativa lösningar. </p>
 <p> I dessa stunder av osäkerhet är det viktigt att känna till sina alternativ.         </p>
 <blockquote><p>Att agera i tid är nyckeln till att bevara sin ekonomiska trygghet</p></blockquote>
@@ -1012,7 +1012,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med att låna till hyran</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med att låna till hyran"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med att låna till hyran"></p>
 <ul>
 <li><strong>Snabb tillgång till medel:</strong> Lån för hyran erbjuder ofta en snabb utbetalning, vilket kan vara avgörande när du står inför en nära förestående förfallodag för hyresbetalningen. Detta ger dig möjligheten att agera snabbt och undvika förseningsavgifter.</li>
 <li><strong>Flexibla lånealternativ:</strong> Det finns en mängd olika låneprodukter tillgängliga, anpassade för att möta enskilda behov. Genom att kunna jämföra alternativ kan du hitta den bästa lösningen för just din situation.</li>
@@ -1030,7 +1030,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med att låna till hyran</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med att låna till hyran"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med att låna till hyran"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Lån för hyresbetalningar tenderar ofta att ha högre räntor jämfört med traditionella lån. Detta kan göra att den totala kostnaden för lånet blir betydande, vilket kan belasta din ekonomi på sikt.</li>
 <li><strong>Kortsiktig lösning:</strong> Att låna pengar för att täcka hyran är vanligtvis en temporär åtgärd och löser inte de grundläggande ekonomiska problemen. Utan en långsiktig plan kan det leda till återkommande skuldsättning.</li>
