--- a/lana-pengar-till-valutahandel/index.html
+++ b/lana-pengar-till-valutahandel/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/11/lana-pengar-till-valutahandel..webp" alt="Låna pengar till valutahandel" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/11/lana-pengar-till-valutahandel.webp" alt="Låna pengar till valutahandel" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -648,7 +648,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Investera smart i valutahandel</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för valutahandel lån."></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för valutahandel lån."></p>
 <p><p>I en värld där kapitalflöden och valutakurser ständigt förändras, ges vi en anmärkningsvärd möjlighet att kapitalisera på valutahandel.  Det är här lånealternativ kan bli en nyttig resurs för den som vill maximera sina investeringsmöjligheter. </p>
 <blockquote><p>Kapital skapar möjligheter, och möjligheterna skapar framgång</p></blockquote>
 <p>Att utnyttja lån för att handla med valutor innebär att du kan öka din potentiella avkastning kraftigt. </p>
@@ -842,7 +842,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån till valutahandel</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån till valutahandel"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån till valutahandel"></p>
 <ul>
 <li><strong>Ökat kapital:</strong> Lån ger dig möjlighet att utöka ditt investeringskapital, vilket möjliggör större affärer än vad du annars skulle kunna utföra. Genom att låna kan du snabbt agera på marknadsmöjligheter och dra nytta av potentiellt lönsamma affärer.</li>
 <li><strong>Hebel för högre avkastning:</strong> Att använda lån i valutahandel innebär att du kan utnyttja hävstång, vilket förstärker din avkastning på investerat kapital. Även små marknadsrörelser kan leda till betydande vinster, vilket kan öka lönsamheten på dina investeringar.</li>
@@ -860,7 +860,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån till valutahandel</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån till valutahandel"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån till valutahandel"></p>
 <ul>
 <li><strong>Ökade förluster:</strong> Att använda lån för valutahandel kan leda till större förluster än vad du skulle uppleva om du handlade med egna medel. Om marknaden rör sig mot dig kan du stå inför betydande ekonomiska konsekvenser, eftersom både lånet och räntorna fortfarande måste återbetalas.</li>
 <li><strong>Kapitalrisk:</strong> Valutamarknaden är extremt volatil och kan förändras snabbt, vilket innebär att värdet på dina investeringar kan sjunka oväntat. Om du tvingas avveckla dina positioner vid ogynnsamma priser kan det leda till en nedgång i ditt totala kapital och potentiella förluster som överstiger den initiala investeringen.</li>
