--- a/lana-pengar-utan-kreditupplysning/index.html
+++ b/lana-pengar-utan-kreditupplysning/index.html
@@ -798,7 +798,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 }</script> </p>
 <div class="row">
 <div class="cell">
-<p><img decoding="async" style="width: 30px; height: 30px; margin: 5px; padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"    src="../media/glodlampa..webp" alt="Förklaring: lån utan kreditupplysning" /><br />
+<p><img decoding="async" style="width: 30px; height: 30px; margin: 5px; padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"    src="../media/glodlampa.webp" alt="Förklaring: lån utan kreditupplysning" /><br />
 Det går bra att låna pengar utan att det registreras en kreditupplysning hos UC. Men det är sannolikt att långivaren kommer att ta ut en högre ränta för en sådan service eftersom kunden kan ha använt samma tillvägagångssätt hos andra långivare tidigare.</p>
 <p>Det det går därför inte att veta hur många ansökningar om lån som gjorts och vilka som redan blivit beviljade. Lån utan kreditupplysning funkar bäst för att <a class="in" href="https://lastoffer.net/l%c3%a5na-20000-Kronor/">låna 30 000 kronor</a> eller mindre.</p>
 <p>De flesta lån som är tillgängliga utan kreditupplysning är snabblån och kreditlån. Det är dock inte de enda lånealternativen som är tillgängliga.</p>
