--- a/lana-till-en-operation/index.html
+++ b/lana-till-en-operation/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/11/lana-till-operation..webp" alt="Låna till en operation" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/11/lana-till-operation.webp" alt="Låna till en operation" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -649,7 +649,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Låna för snabbare operationer</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån till operation"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån till operation"></p>
 <p><p>I en värld där väntetider i sjukvården ofta blir en plågsam verklighet, söker många människor alternativa lösningar för att få den vård de så desperat behöver.  </p>
 <blockquote><p>När tiden är avgörande, kan privat finansiering öppna dörrar för snabbare behandling</p></blockquote>
 <p> Denna insikt har blivit central för många som överväger att låna till en operation, oavsett om det handlar om en medicinskt nödvändig åtgärd eller en efterlängtad kosmetisk förändring. </p>
@@ -761,7 +761,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med att låna till operation</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med att låna till operation"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med att låna till operation"></p>
 <ul>
 <li><strong>Snabbare vård:</strong> Genom att låna till en operation kan du undvika de långa väntetiderna inom den offentliga sjukvården. Detta gör att du snabbt kan få den behandling du behöver utan att drabbas av onödig väntan, vilket är särskilt viktigt i akuta situationer.</li>
 <li><strong>Ökad tillgång till specialister:</strong> När du väljer privat vård, får du ofta tillgång till specialister som har stor expertis inom sitt område. Detta kan leda till högre kvalitet på vården och bättre resultat.</li>
@@ -779,7 +779,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med att låna till operation</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med att låna till operation"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med att låna till operation"></p>
 <ul>
 <li><strong>Höga kostnader:</strong> Att låna till en operation kan innebära betydande kostnader, vilket ofta leder till skuld. Om du inte planerar noggrant kan det bli en finansiell belastning som påverkar din ekonomi på lång sikt.</li>
 <li><strong>Räntor och avgifter:</strong> De flesta lån kommer med räntor och eventuella dolda avgifter som kan göra lånet dyrare än förväntat. Det är viktigt att noggrant granska lånevillkoren för att undvika att hamna i en ogynnsam situation.</li>
