--- a/lana-utan-fast-anstallning/index.html
+++ b/lana-utan-fast-anstallning/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/09/lan-utan-fast-anstallning..webp" alt="Lån utan fast anställning" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/09/lan-utan-fast-anstallning.webp" alt="Lån utan fast anställning" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -884,7 +884,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Lån utan fast anställning möjligheter</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för lån utan fast jobb"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för lån utan fast jobb"></p>
 <p><p>I en värld där arbetsmarknaden genomgår dramatiska förändringar blir traditionella anställningar alltmer sällsynta.  Många finner sig i anställningsformer som frilans, konsult eller projektanställd. </p>
 <blockquote><p>   Möjligheterna är oändliga för dem som vågar tänja på gränserna</p></blockquote>
 <p>För länge sedan bedömde långivare i första hand stabiliteten i fasta anställningar.  Men nu har många aktörer inom lånebranschen anpassat sig till nya förutsättningar, vilket gör att egenföretagare och frilansare kan hitta vägar till finansiering. </p>
@@ -1033,7 +1033,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med lån utan fast jobb</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med lån utan fast jobb"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med lån utan fast jobb"></p>
 <ul>
 <li><strong>Flexibilitet i anställningsformer:</strong> Lån utan fast anställning ger möjligheten att få finansiering oavsett vilken typ av arbete du utför. Detta innebär att egenföretagare, frilansare och projektanställda kan få tillgång till lån utan att behöva förlita sig på en traditionell anställning.</li>
 <li><strong>Ökad tillgänglighet:</strong> Många långivare har anpassat sina kriterier för att bevilja lån, vilket gör det enklare för dem utan fast anställning att få godkännande. Detta har öppnat upp för fler att finansiera sina projekt eller drömmar.</li>
@@ -1051,7 +1051,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lån utan fast jobb</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån utan fast jobb"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån utan fast jobb"></p>
 <ul>
 <li><strong>Högre räntor:</strong> Lån utan fast anställning tenderar att ha högre räntor jämfört med traditionella lån. Detta beror på den ökade risk som långivarna tar, vilket kan leda till högre kostnader över tid.</li>
 <li><strong>Strikta krav på dokumentation:</strong> Trots att det är möjligt att få lån utan fast anställning, ställer långivare ofta högre krav på dokumentation och bevis på inkomst. Att samla in och presentera denna information kan vara tidskrävande och frustrerande, särskilt för dem med oregelbundna inkomster.</li>
