--- a/lana-utan-ranta/index.html
+++ b/lana-utan-ranta/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2016/06/lana-pengar-utan-ranta..webp" alt="Låna pengar utan ränta" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2016/06/lana-pengar-utan-ranta.webp" alt="Låna pengar utan ränta" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -607,7 +607,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Räntefria lån: En smart lösning</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för räntefria lån."></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för räntefria lån."></p>
 <p>    Att befinna sig i en knipa där extra kapital krävs kan kännas överväldigande, men vad händer om du kunde <a href="https://lastoffer.net/">låna pengar</a> utan att bekymra dig för räntor? Denna möjlighet är inte bara en utopi; det är en verklighet som många långivare erbjuder. </p>
 <blockquote><p>Räntefria alternativ kan vara en livlina i hektiska ekonomiska tider. </p></blockquote>
 <p>     I en värld där snabba lösningar efterfrågas, framträder räntefria lån som en attraktiv möjlighet.  Vanligtvis sträcker sig dessa lån över en kort tidsperiod, vilket ger låntagare chansen att hantera sina finansiella utmaningar utan att samla på sig ytterligare kostnader. </p>
@@ -842,7 +842,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med räntefria lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med räntefria lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med räntefria lån"></p>
 <ul>
 <li>Inga räntekostnader</li>
 <p>    Räntefria lån innebär att låntagaren slipper betala ränta under den avtalade perioden. Detta kan leda till betydande besparingar, särskilt vid kortsiktiga lånebehov.</p>
@@ -870,7 +870,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med räntefria lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med räntefria lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med räntefria lån"></p>
 <ul>
 <li>Kort återbetalningstid</li>
 <p>    Räntefria lån har ofta en kort återbetalningstid, vanligtvis mellan 14 och 30 dagar. Detta kan sätta press på låntagaren att snabbt återbetala lånet, vilket kan leda till stress och ekonomiska svårigheter.</p>
