--- a/lane-penger-raskt/index.html
+++ b/lane-penger-raskt/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lane-penger/">låne penger<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/12/lane-penger-raskt..webp" alt="Låne penger raskt" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/12/lane-penger-raskt.webp" alt="Låne penger raskt" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -501,7 +501,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Raskt lån for akutte behov</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Forklaring for raske lånealternativer"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Forklaring for raske lånealternativer"></p>
 <p><p>Når uventede utgifter rammer, kan muligheten til å låne penger raskt være livreddende.  </p>
 <blockquote><p>Rask respons kan være forskjellen mellom ro og uro</p></blockquote>
 <p> I dagens tempo er det en voksende etterspørsel etter lånealternativer som gir umiddelbar tilgang til kontanter, uten unødvendig omstendelighet. </p>
@@ -664,7 +664,7 @@ window.addEventListener(
 <div class="row forulempe">
 <div class="cell positiv">
 <h3>Fordeler med raske lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fordeler med raske lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fordeler med raske lån"></p>
 <ul>
 <li><strong>Rask tilgang til midler:</strong> Raskt forbrukslån gir deg umiddelbar tilgang til penger når du trenger det mest. Dette kan være avgjørende i nødsituasjoner, som uventede regninger eller reparasjoner.</li>
 <li><strong>Ingen krav til sikkerhet:</strong> Lån uten sikkerhet betyr at du ikke trenger å stille eiendom eller andre verdifulle eiendeler som pant. Dette gir deg friheten til å bruke lånet uten risiko for å miste eiendeler.</li>
@@ -682,7 +682,7 @@ window.addEventListener(
 <div class="row forulempe">
 <div class="cell negativ">
 <h3>Ulemper med raske lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Ulemper med raske lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Ulemper med raske lån"></p>
 <ul>
 <li><strong>Høye renter:</strong> Raskt forbrukslån kommer ofte med høyere renter enn tradisjonelle lån. Dette kan føre til at den totale kostnaden for lånet blir betydelig høyere, noe som kan skape økonomisk belastning i fremtiden.</li>
 <li><strong>Kortere nedbetalingstid:</strong> Mange raske lån har kortere nedbetalingstider, noe som kan gjøre det vanskeligere å håndtere månedlige betalinger. En stram nedbetalingsplan kan også føre til at låntakere må betale mer hver måned, noe som kan bli overveldende.</li>
