--- a/lane-penger/index.html
+++ b/lane-penger/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lane-penger/">låne penger<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/11/lane-penger..webp" alt="Låne penger med lav rente" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/11/lane-penger.webp" alt="Låne penger med lav rente" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -504,7 +504,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Låne penger for fremtiden</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="forklaring for lavrentelån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="forklaring for lavrentelån"></p>
 <p><p>I dagens økonomiske landskap er det mange som står overfor finansielle valg som kan endre livene deres.  </p>
 <blockquote><p>Å låne smart er å investere i fremtiden</p></blockquote>
 <p> Denne tanken ligger til grunn for valget av lån med lav rente, som kan være et springbrett mot dine drømmer og ambisjoner. </p>
@@ -692,7 +692,7 @@ I Sverige finns flera möjligheter att <a href="https://lastoffer.net/">låna pe
 <div class="row forulempe">
 <div class="cell positiv">
 <h3>Fordeler med lavrentelån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fordeler med lavrentelån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fordeler med lavrentelån"></p>
 <ul>
 <li><strong>Lave renter:</strong> Lån med lav rente gir deg muligheten til å spare penger over tid. Dette gjør at du kan fokusere på å betale ned selve lånet i stedet for å kaste bort penger på høye rentekostnader.</li>
 <li><strong>Bedre refinansieringsmuligheter:</strong> Ved å samle dyre smålån og kredittkortgjeld i ett lån med lav rente, får du bedre oversikt over økonomien din. Dette kan redusere stresset ved betalingsforpliktelser og gi deg en mer bærekraftig økonomisk situasjon.</li>
@@ -710,7 +710,7 @@ I Sverige finns flera möjligheter att <a href="https://lastoffer.net/">låna pe
 <div class="row forulempe">
 <div class="cell negativ">
 <h3>Ulemper med lavrentelån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Ulemper med lavrentelån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Ulemper med lavrentelån"></p>
 <ul>
 <li><strong>Høye gebyrer:</strong> Selv om renten kan være lav, kan mange forbrukslån komme med betydelige gebyrer som oppstartsgebyr, termingebyr, og fakturagebyrer. Disse gebyrene kan raskt legge betydelige kostnader til det totale lånebeløpet, og du må derfor være oppmerksom på hva du faktisk ender opp med å betale.</li>
 <li><strong>Risiko for overbelåning:</strong> Det er lett å bli fristet til å ta opp større lån enn nødvendig, spesielt når de er tilgjengelige med lave renter. Dette kan føre til en situasjon der man blir overbelånt og får problemer med å håndtere gjelden, noe som kan skade din økonomiske fremtid.</li>
