--- a/laneavtal/index.html
+++ b/laneavtal/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/laneavtal-1..webp" alt="Låneavtal" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/laneavtal-1.webp" alt="Låneavtal" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -501,7 +501,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Låneavtal: Nyckeln till din framtid.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för låneavtalsprocessen"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för låneavtalsprocessen"></p>
 <p><p>I en värld där ekonomiska beslut formar våra liv och framtider, blir låneavtal en central aktör i vår ekonomiska verklighet.  Att begripa andemeningen i dessa avtal är avgörande för att undvika missförstånd och konflikter. </p>
 <p> Låneavtal handlar inte endast om siffror, utan om ansvarsfull hantering av resurser och relationer.   </p>
 <blockquote><p>Förståelse av låneavtal skapar möjligheter och ger ekonomisk trygghet</p></blockquote>
@@ -660,7 +660,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med Låneavtal</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Låneavtal"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Låneavtal"></p>
 <ul>
 <li><strong>Klart definierade villkor:</strong> Låneavtal klargör alla villkor som rör lånet, inklusive ränta, återbetalningstider och eventuella avgifter. Detta ger låntagaren en tydlig bild av sina ekonomiska åtaganden, vilket underlättar planeringen av framtida utgifter.</li>
 <li><strong>Skydd för båda parter:</strong> Genom att skapa ett skriftligt avtal skyddas både långivare och låntagare. Det minskar risken för konflikter genom att de rättigheter och skyldigheter som parterna har gentemot varandra tydligt anges.</li>
@@ -678,7 +678,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med Låneavtal</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Låneavtal"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Låneavtal"></p>
 <ul>
 <li><strong>Ökad skuldsättning:</strong> Låneavtal kan leda till en ökad skuldsättning om låntagaren inte noga överväger sin återbetalningsförmåga. Detta kan skapa en ond cirkel av att ständigt behöva ta nya lån för att betala av befintliga skulder.</li>
 <li><strong>Risk för förseningsavgifter:</strong> Om låntagaren missar en betalning kan fordringsägaren ålägga ytterligare avgifter. Dessa kostnader kan snabbt eskalera och göra det svårare att återfå ekonomisk kontroll.</li>
