--- a/laneerbjudanden/index.html
+++ b/laneerbjudanden/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2016/12/laneerbjudanden..webp" alt="Låneerbjudanden – senaste budet på lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2016/12/laneerbjudanden.webp" alt="Låneerbjudanden – senaste budet på lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -687,7 +687,7 @@ button.bleu {
 <h2>
 <div class="unskew">Optimera dina låneval idag.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för låneerbjudanden."></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för låneerbjudanden."></p>
 <p><p>I en värld där ekonomiska beslut är av största vikt har lånealternativ blivit en central aspekt av vår vardag.  Att navigera genom djungeln av låneerbjudanden kan verka överväldigande, men att förstå de olika alternativen och de faktorer som påverkar din ekonomiska situation är avgörande. </p>
 <blockquote><p>Detaljerna i låneerbjudanden kan göra skillnaden mellan framgång och motgång</p></blockquote>
 <p>Det har aldrig varit enklare att hitta skräddarsydda lösningar för dina finansieringsbehov.  Med en myriad av långivare och olika typer av lån, är det viktigt att jämföra villkor och räntor noggrant. </p>
@@ -805,7 +805,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med låneerbjudanden</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med låneerbjudanden"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med låneerbjudanden"></p>
 <ul>
 <li>Stort urval av långivare</li>
 <p>Marknaden för lån erbjuder ett brett spektrum av långivare, vilket ger låntagare en möjlighet att hitta den bästa lösningen för sina specifika behov. Detta mångfald möjliggör konkurrens, vilket i sin tur kan leda till mer fördelaktiga villkor.</p>
@@ -833,7 +833,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med låneerbjudanden</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med låneerbjudanden"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med låneerbjudanden"></p>
 <ul>
 <li>Höga räntor</li>
 <p>En av de främsta nackdelarna med vissa låneerbjudanden är de höga räntor som kan komma med, särskilt om du har en låg kreditvärdighet. Detta kan leda till att lånet blir kostsammare än förväntat, vilket ökar den totala skuldbördan över tid.</p>
