--- a/lanekoll/index.html
+++ b/lanekoll/index.html
@@ -205,28 +205,28 @@
 <div class="cell">
 <h3>Lånekoll Trustpilot</h3>
 <p>Omdömen: 1339</p>Trustpilot betyg:  4,9 av 5 (98 %)</p>
-<div class="trust"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg..webp" height="50px" width="250px" alt="Trustpilot ger Lånekoll betyg 4.9 av 5" title="Trustpilot ger Lånekoll betyg 4.9 av 5"></div> 
+<div class="trust"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg.webp" height="50px" width="250px" alt="Trustpilot ger Lånekoll betyg 4.9 av 5" title="Trustpilot ger Lånekoll betyg 4.9 av 5"></div> 
 </div>
 
 <div class="cell rew">
  <p>2023-07-17</p>
 	 <h4>Proffsigt bemötande!</h4>
 	 <p>Snabba, god tillgänglighet, lyssnade verkligen på våra behov och frågor och gav oss ett bra bemötande från start till mål!</p>	
-	<div class="betyg_1"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg..webp" height="25px" width="125px" alt="Kund Lånekoll omdöme 4" title="Kund ger Lånekoll betyg 4 av 5"></div>
+	<div class="betyg_1"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Lånekoll omdöme 4" title="Kund ger Lånekoll betyg 4 av 5"></div>
  	</div>
 
 <div class="cell rew">
 	<p>2023-06-16</p>
 		<h4>Väldigt professionella och hjälpsamma</h4>
 		<p>Väldig hjälpsamma och professionella.Min handläggare på lånekoll hjälpte mig hela vägen med bankontakt till beviljat och utbetald bolån.</p>	
-	<div class="betyg_2"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg..webp" height="25px" width="125px" alt="Kund Lånekoll omdöme 5" title="Kund ger Lånekoll betyg 5 av 5"></div>
+	<div class="betyg_2"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Lånekoll omdöme 5" title="Kund ger Lånekoll betyg 5 av 5"></div>
  </div>
 
 <div class="cell rew">
  <p>2023-07-04</p>
  <h4>Extrem vänlig och professionell</h4>
 	 <p>Extrem vänlig, behjälplig och professionell handläggare. Stefan som hjälpte mig var super pedagogisk och alltid tillgänglig. Stor eloge till Stefan!</p>	
-	<div class="betyg_3"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg..webp" height="25px" width="125px" alt="Kund Lånekoll omdöme 5" title="Kund ger Lånekoll betyg 5 av 5"></div>
+	<div class="betyg_3"><img decoding="async" src="../../../lastoffer.net/media/trustpilotbg.webp" height="25px" width="125px" alt="Kund Lånekoll omdöme 5" title="Kund ger Lånekoll betyg 5 av 5"></div>
  </div>
  
 <style>
@@ -381,7 +381,7 @@ Kreditexperter med nöjdast kunder som hittar bra lån helt kostnadsfritt.",
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/09/lanekoll-sanker-din-ranta..webp" alt="Lånekoll - sänker din ränta enkelt" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/09/lanekoll-sanker-din-ranta.webp" alt="Lånekoll - sänker din ränta enkelt" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -705,7 +705,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Sänk din ränta med Lånekoll</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Lånekoll och lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Lånekoll och lån"></p>
 <p><p>I en tid där privatekonomin ständigt är i förändring, blir det allt viktigare att ha kontroll över sina lån.  Att sänka sin ränta kan innebära stora besparingar och ge en möjlighet till ökad ekonomisk frihet. </p>
 <blockquote><p>Att förstå sina lånevillkor är avgörande för att göra kloka beslut</p></blockquote>
 <p> Lånekoll erbjuder en smidig plattform som gör just detta möjligt.     </p>
@@ -901,7 +901,7 @@ Narvavägen 12<br />
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med Lånekoll</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Lånekoll"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Lånekoll"></p>
 <ul>
 <li><strong>Kostnadsfri tjänst:</strong> Att använda Lånekoll kostar dig ingenting, vilket gör den till en ekonomisk fördelaktig lösning för alla som är på jakt efter lån. Du får tillgång till en mängd erbjudanden utan att behöva betala någon avgift för att få informationen.</li>
 <li><strong>Brett urval av långivare:</strong> Lånekoll samarbetar med över 30 olika banker och kreditinstitut, vilket ger dig en stor mängd alternativ att välja mellan. Denna konkurrens bland långivarna resulterar ofta i mer förmånliga räntor och bättre villkor för låntagare.</li>
@@ -919,7 +919,7 @@ Narvavägen 12<br />
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med Lånekoll</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Lånekoll"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Lånekoll"></p>
 <ul>
 <li><strong>Begränsad tillgång för vissa låntagare:</strong> Trots att Lånekoll har flexibla villkor kan vissa låntagare fortfarande ha svårt att få lån beviljade, särskilt de med allvarliga kreditproblem. Om du har betalningsanmärkningar eller skulder hos Kronofogden kan detta påverka dina möjligheter negativt.</li>
 <li><strong>Långsammare utbetalningar vid problem:</strong> Även om Lånekoll kan erbjuda snabba svar, kan det finnas situationer där utbetalningarna blir fördröjda. Detta kan leda till frustration för låntagare som behöver pengar snabbt för oförutsedda utgifter.</li>
