--- a/lanelosningar/index.html
+++ b/lanelosningar/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/lanelosningar-1..webp" alt="Lånelösningar – nya lösningar och lånemetoder" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/lanelosningar-1.webp" alt="Lånelösningar – nya lösningar och lånemetoder" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -503,7 +503,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Nya Lånelösningar För En Modern Värld</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring För Nya Lånemetoder"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring För Nya Lånemetoder"></p>
 <p><p>Världen av finansiering har genomgått en dramatisk metamorfos under de senaste åren, där traditionella bankmetoder möter nytänkande innovationer.  Denna utveckling har ägt rum i takt med att allt fler ser behovet av snabba och flexibla lånealternativ. </p>
 <blockquote><p>Innovation inom lån ger människor möjlighet att återfå kontroll över sin ekonomi</p></blockquote>
 <p> Idag är låntagare inte längre bundna till konventionella system. </p>
@@ -757,7 +757,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med nya Lånelösningar</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar Med Nya Lånelösningar"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar Med Nya Lånelösningar"></p>
 <ul>
 <li><strong>Snabb ansökningsprocess:</strong> Den digitala låneansökan möjliggör en snabb och effektiv behandling av låneansökningar. Låntagare kan få svar inom minuter, vilket är en stor fördel vid akuta ekonomiska behov.</li>
 <li><strong>Tillgänglighet för fler låntagare:</strong> Fintech-långivare öppnar dörrar för personer med svag kreditvärdighet som traditionellt har uteslutits från lån. Genom att använda alternativa datakällor kan fler få möjlighet till finansiering.</li>
@@ -775,7 +775,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med nya Lånelösningar</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar Med Nya Lånelösningar"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar Med Nya Lånelösningar"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Många högkostnadslån, såsom snabblån och sms-lån, har betydligt högre räntor jämfört med traditionella lån. Detta kan leda till att den totala kostnaden för lånet blir mycket större och svårare att hantera.</li>
 <li><strong>Korta återbetalningstider:</strong> Snabblån kräver ofta återbetalning inom 30 dagar, vilket kan sätta extra press på låntagarens ekonomi. Om låntagaren inte kan återbetala i tid kan det leda till ytterligare skulder.</li>
