--- a/laneprocess/index.html
+++ b/laneprocess/index.html
@@ -178,7 +178,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/laneprocess..webp" alt="Låneprocess" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/laneprocess.webp" alt="Låneprocess" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -500,7 +500,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Låneprocessen: Från musklick till pengar på kontot</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för låneprocessen"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för låneprocessen"></p>
 <p><p>I en värld där finansiella utrymmen ibland kan kännas begränsade, blir möjligheten att låna medel en ovärderlig resurs.  Att navigera i låneprocessen kan dock ofta verka överväldigande.  Att förstå varje steg i denna process är avgörande för att säkerställa att du gör kloka och informerade beslut. </p>
 <blockquote><p>Kunskap är nyckeln till att bemästra låneprocessens intrikata detaljer</p></blockquote>
 <p>Varje låneansökan inleds med att du redovisar din ekonomiska status, vilket innefattar inkomster, skulder och eventuella tillgångar. </p>
@@ -734,7 +734,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Hitta fördelar i olika låneformer</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med låneprocessen"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med låneprocessen"></p>
 <ul>
 <li>Kraftfull ekonomisk lösning: Lån kan ge snabb tillgång till kapital när du står inför oväntade utgifter, som medicinska räkningar eller reparationer. Det möjliggör att du kan hantera akuta situationer utan att behöva tuffa upp dina besparingar.</li>
 <li>Flexibilitet i användning: Lån kan användas för en rad olika ändamål, såsom att finansiera en utbildning, samla skulder eller investera i ett hem. Denna flexibilitet ger dig möjlighet att anpassa lånet efter dina specifika finansiella behov.</li>
@@ -752,7 +752,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Identifiera nackdelar i låneprocessen</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med låneprocessen"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med låneprocessen"></p>
 <ul>
 <li>Ökad skuldsättning: Att ta ett lån betyder i praktiken att du ökar din skuldsättning. Om du inte hanterar dina utgifter noggrant kan detta leda till allvarliga finansiella problem och en tuffare ekonomisk framtid.</li>
 <li>Räntor och avgifter: Lån medför alltid kostnader i form av räntor och avgifter som kan bli ganska höga. Dessa kostnader kan påverka din månatliga budget och göra det svårt att spara eller investera.</li>
